--- a/learn-certs-pr/courses/dp-070t00.yml
+++ b/learn-certs-pr/courses/dp-070t00.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Open Source Daten Workloads nach Azure übertragen
+title: Migrate Open Source Data Workloads to Azure
 metadata:
-  title: 'Kurs DP-070T00-A: Open Source Daten Workloads nach Azure übertragen'
-  description: 'Kurs DP-070T00-A: Open Source Daten Workloads nach Azure übertragen'
+  title: 'Course DP-070T00-A: Migrate Open Source Data Workloads to Azure'
+  description: 'Course DP-070T00-A: Migrate Open Source Data Workloads to Azure'
 uid: course.dp-070t00
 courseNumber: 'DP-070T00-A'
 hoursToComplete: 24
@@ -29,8 +29,8 @@ prerequisitesSection: |-
   Zusätzlich zu ihrer Berufserfahrung sollten Kandidaten, die den Kurs besuchen, bereits über die folgenden technischen Kenntnisse verfügen&#58;
   - Einige Erfahung mit Open Source relationalen Datenbankverwaltungssystem wie Postgres und/oder MySQL, SQL administration, Backup und Recovery Techniken z.B. Taple Data löschen
 outlineSection: |-
-  ### Modul 1&#58; Migration nach Azure SQL DB für MySQL & PostgreSQL
-  Dieses Modul beschreibt die Vorteile und Architektur vonSQL DB
+  ### Modul  1&#58; Migration nach Azure SQL DB für MySQL & PostgreSQL
+  Dieses Modul beschreibt die Vorteile und Architektur Azure SQL DB.
   #### Lektionen
   - OSS datenbank Überblick
   - übliche OSS datenbank workloads
@@ -40,7 +40,7 @@ outlineSection: |-
   #### Labor&#58; source OSS datenbanken erstellen
   - Postgres migration DB server Installieren
   - MySQL migration DB server Installieren
-  - Backups / data dumps von Postgres / MySQL
+  - Backups/data dumps von Postgres/MySQL
   - aus data dumps wiederherstellen
 
   Am Ende dieses Moduls können die Teilnehmer&#58;
@@ -49,12 +49,12 @@ outlineSection: |-
   - Kundenchallenges in der Migration
 
 
-  ### Modul 2&#58; on-premises MySQL nach Azure SQL DB für MySQL übertragen
+  ### Modul  2&#58; on-premises MySQL nach Azure SQL DB für MySQL übertragen
   Dieses Modul beschreibt die Vorteile und Prozesse der MySQL workloads Migration anch Azure SQL DB
   #### Lektionen
   - Azure SQL DB for MySQL konfigurieren und verwalten
   - lokale MySQL to SQL DB for MySQL migrieren
-  ­ Anwendungsmigration
+  ­- Anwendungsmigration
   - Überlegungen zur Migration
 
 
@@ -67,16 +67,16 @@ outlineSection: |-
   Am Ende dieses Moduls können die Teilnehmer&#58;
   - Azure SQL DB for MySQL konfigurieren und verwalten
   - lokale MySQL to SQL DB for MySQL migrieren
-  ­ Anwendungsmigration
+  ­- Anwendungsmigration
   - Überlegungen zur Migration
 
 
-  ### Modul 3&#58; lokale PostgreSQL to Azure SQL DB for PostgreSQL Migrieren
+  ### Modul  3&#58; lokale PostgreSQL to Azure SQL DB for PostgreSQL Migrieren
   Dieses Modul beschreibt die Vorteile und den Prozess der Migration von PostgreSQL DB-Workloads zu Azure SQL DB
   #### Lektionen
   - Azure SQL DB for PostgreSQL konfigurieren und verwalten
   - lokale MySQL nach SQL DB für PostgreSQL übertragen
-  ­ Anwendungsmigration
+  ­- Anwendungsmigration
   - Überlegungen zur Migration
 
 
@@ -89,8 +89,10 @@ outlineSection: |-
   Am Ende dieses Moduls können die Teilnehmer&#58;
   - Azure SQL DB for PostgreSQL konfigurieren und verwalten
   - lokale MySQL nach SQL DB für PostgreSQL übertragen
-  ­ Anwendungsmigration
+  ­- Anwendungsmigration
   - Überlegungen zur Migration
 
-  #### Additional Reading&#58;
+  #### Additional Reading
+
   Keine Extraliteratur ist für diesen Kurs nötig
+
