--- a/learn-certs-pr/courses/mb-200t00.yml
+++ b/learn-certs-pr/courses/mb-200t00.yml
@@ -33,7 +33,7 @@ summary: |-
   Mit Hilfe der Microsoft Power-Platform können Unternehmen Abläufe optimieren, indem sie Routineaufgaben automatisieren und bewährte Praktiken standardisieren. Diese Schulung bietet einen allgemeinen Überblick über die Funktionen von Microsoft Dynamics 365 und der Power-Plattform und bildet die Grundlage für andere Schulungsangebote von Microsoft Dynamics 365 und der Power-Plattform. Zu den übergeordneten Themen gehören Anwendungskonfiguration, Automatisierungsmöglichkeiten, Integration, Test und Bereitstellung.
 
   #### Zielgruppenprofil
-  Zu den Aufgaben des Dynamics 365-Modulbetreuers für den Kundendialog gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von sowie Lösungen und Anwendungen zu konfigurieren. Der Modulbetreuer implementiert eine Lösung mit gebrauchsfertigen Funktionen, codefreier Erweiterungsmöglichkeit, sowie Anwendungs- und Service-Integrationen.
+  Zu den Aufgaben des Dynamics 365-Modulbetreuers gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von sowie Lösungen und Anwendungen zu konfigurieren. Der Modulbetreuer implementiert eine Lösung mit gebrauchsfertigen Funktionen, codefreier Erweiterungsmöglichkeit, sowie Anwendungs- und Service-Integrationen.
 outlineSection: |-
   ### Modul 1&#58; Übersicht über die Power-Plattform
   In diesem Modul erlernen sie die Grundlagen der Power-Plattform.  Sie werden die verschiedenen Administratorportale durchsuchen und Anwendungen installieren.
@@ -86,7 +86,7 @@ outlineSection: |-
 
   Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
   - Eine Canvas-App erstellen.
-  - Mit CDS-Daten arbeiten
+  - Mit CDS-Daten arbeiten.
 
 
   ### Modul 5&#58; Sicherheit
@@ -155,7 +155,7 @@ outlineSection: |-
   - Zusätzliche Details zum Geschäftsprozessablauf
 
   Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
-  - Geschäftsprozessabläufe erstellen und verwenden
+  - Geschäftsprozessabläufe erstellen und verwenden.
 
 
   ### Modul 11&#58; Einführung in Integrationen
@@ -230,5 +230,6 @@ outlineSection: |-
   - Mobile Konfiguration
 
   Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
-  - Mobile Geräte konfigurieren.
+  - Für das Handy konfigurieren.
   - Komponenten bereitstellen.
+
