--- a/learn-certs-pr/courses/mb-310t00.yml
+++ b/learn-certs-pr/courses/mb-310t00.yml
@@ -25,7 +25,7 @@ summary: |-
   Dieser Kurs behandelt die finanziellen Aspekte von Dynamics 365&#58; Konfigurieren und Verwenden wesentlicher Finanzkomponenten, Kreditorenbuchhaltung, Debitorenbuchhaltung, Inkasso, Budgetierung, Anlagevermögen und zusätzliche Funktionen
 
   #### Zielgruppenprofil
-  Zu den Aufgaben des Dynamics 365-Modulbetreuers für den Kundendialog gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von Bedürfnissen, sowie Lösungen und Anwendungen zu konfigurieren. Der Modulbetreuer implementiert eine Lösung mit gebrauchsfertigen Funktionen, codefreier Erweiterungsmöglichkeit, sowie Anwendungs- und Service-Integrationen.
+  Zu den Aufgaben des Dynamics 365 Finance Functional Consultant gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von sowie Lösungen und Anwendungen zu konfigurieren. Der Modulbetreuer implementiert eine Lösung mit gebrauchsfertigen Funktionen, codefreier Erweiterungsmöglichkeit, sowie Anwendungs- und Service-Integrationen.
 prerequisitesSection: |-
   Grundlegende BuchhaltungsfähigkeitenKernkompetenzen in Dynamics 365 Core
 outlineSection: |-
@@ -72,7 +72,7 @@ outlineSection: |-
   - Übungslabore
   - Modulübersicht
 
-  Erforderlichen Komponenten für den Kontenplan zu identifizieren
+  Erforderlichen Komponenten für den Kontenplan zu identifizieren.
   - Kontenplan zu definieren und konfigurieren.
   - Die finanziellen Dimensionen und Dimensionssätze zu definieren und konfigurieren.
   - Kontenplan, Hauptkonten, Kategorien, Vorlagen, Hauptbuch-Alias und Kontostandskontrolle zu konfigurieren
@@ -94,7 +94,7 @@ outlineSection: |-
 
   Verstehen Verschiedene Arten von Journalen und deren Aufbau.
   - Wissen, wie man das Ledger- und Buchungssetup konfiguriert.
-  - Wissen, wie man Journale konfiguriert und verwendet
+  - Wissen, wie man Journale konfiguriert und verwendet.
 
 
   ### Modul 6&#58; Cash- und Bank-Management konfigurieren
@@ -170,7 +170,7 @@ outlineSection: |-
   - Modulübersicht
 
   Sie haben jetzt gelernt, wie Sie tägliche Aktivitäten im Hauptbuch verarbeiten und die Journalsteuerung verwenden, um ap
-  - Sie haben mit Saldenkontrollkonten gearbeitet, um die Salden von Banken oder Liquiditätskonten anzuzeigen.
+  Sie haben mit Saldenkontrollkonten gearbeitet, um die Salden von Banken oder Liquiditätskonten anzuzeigen.
   - Sie haben gelernt, wie Sie von Gutscheinvorlagen für den Betrag profitieren können, bei denen einfach der genaue Betrag kopiert wird
 
 
@@ -219,7 +219,7 @@ outlineSection: |-
   - Übungslabor
   - Modulübersicht
 
-  Kreditorenkomponenten konfiguriert
+  Kreditorenkomponenten konfiguriert.
   - Das Erstellen und verwalten einen Lieferanten.
   - Kreditorenzahlungen konfigurieren.
   - Kreditorenbuchungsprofile einrichten.
@@ -240,7 +240,7 @@ outlineSection: |-
   - Modulübersicht
 
   Sie können Lieferantenrechnungen manuell eingeben oder elektronisch über eine Dateneinheit empfangen
-  - Sie können die Rechnungen mithilfe eines Rechnungsgenehmigungsjournals oder der Seite "Lieferantenrechnung" überprüfen und genehmigen
+  - Sie können die Rechnungen mithilfe eines Rechnungsgenehmigungsjournals oder der Seite &quot;Lieferantenrechnung&quot; überprüfen und genehmigen
   - wie Sie den Rechnungsabgleich, die Richtlinien für Lieferantenrechnungen und den Workflow verwenden können, um den Überprüfungsprozess zu automatisieren
   - Wie Sie mit Vorauszahlungen an Ihre Lieferanten umgehen
 
@@ -258,7 +258,7 @@ outlineSection: |-
   - Übungslabore
   - Modulübersicht
 
-  Transaktionen abwickeln und Abrechnungen rückgängig machen
+  Transaktionen abwickeln und Abrechnungen rückgängig machen.
   - Gelder mittels Kostenzuordnung verteilen.
   - Rechnungsprüfungsrichtlinien konfigurieren.
 
@@ -284,14 +284,14 @@ outlineSection: |-
 
 
   ### Modul 17&#58; Tägliche Abläufe in der Debitorenbuchhaltung durchführen
-  Erfahren Sie, wie Sie freie Textrechnungen erstellen, Zahlungen von Kunden erhalten und bei der Bank einzahlen. Sie erfahren auch, wie Sie einem Kunden den Überzahlungsbetrag oder andere Gründe wie das Kundenrückgabeszenario erstatten, bei dem Sie dem Kunden nicht nur die Zahlung, sondern auch die eingezogene Steuer erstatten müssen, indem Sie Stornierungen verwenden und Transaktionsstornierungen in den Forderungen verwenden . Die Sie lernen auch, wie sie Gelder mit Hilfe von Kostenzuordnung in einer freien Textrechnung verteilen.
+  Erfahren Sie, wie Sie freie Textrechnungen erstellen, Zahlungen von Kunden erhalten und bei der Bank einzahlen. Sie erfahren auch, wie Sie einem Kunden den Überzahlungsbetrag oder andere Gründe wie das Kundenrückgabeszenario erstatten, bei dem Sie dem Kunden nicht nur die Zahlung, sondern auch die eingezogene Steuer erstatten müssen, indem Sie Stornierungen verwenden und Transaktionsstornierungen in den Forderungen verwenden. Die Sie lernen auch, wie sie Gelder mit Hilfe von Kostenzuordnung in einer freien Textrechnung verteilen.
   #### Lektionen
   - Erstellen freier Textrechnungen und erfassen von Kundenzahlungen
   - Transaktionen abwickeln und die Abwicklung rückgängig machen
   - Übungslabor
   - Modulübersicht
 
-  - Gelder mittels Kostenzuordnung verteilen
+  Gelder mittels Kostenzuordnung verteilen
   - Erstellen freier Textrechnungen und erfassen von Kundenzahlungen
   - Konfigurieren wiederkehrender Rechnungen
   - Stornos in der Debitorenbuchhaltung verwenden
@@ -312,7 +312,7 @@ outlineSection: |-
   - Übungslabor
   - Modulübersicht
 
-  Kredit- und Inkassokomponenten konfiguriert
+  Kredit- und Inkassokomponenten konfiguriert.
   - Konfigurieren Sie Restantenlisten, Kundenpools, Inkassoagenten und definition von Restantenzeiträumen.
   - Interessen einrichten und verwalten.
   - Einrichten und Verwalten von Inkassoschreiben.
@@ -528,3 +528,4 @@ outlineSection: |-
   - Umfrage nach dem Kurs
 
   Du wirst haben den Kurs abgeschlossen.
+
