--- a/learn-certs-pr/courses/mb-320t00.yml
+++ b/learn-certs-pr/courses/mb-320t00.yml
@@ -22,16 +22,16 @@ products:
 exams:
 - uid: exam.mb-320
 summary: |-
-  In diesem Kurs wird die Fertigung in der Dynamics 365-App-Suite erläutert: diskrete Fertigung, schlanke Fertigung und Produktion
+  In diesem Kurs wird die Fertigung in der Dynamics 365-App-Suite erläutert&#58; diskrete Fertigung, schlanke Fertigung und Produktion
 
   #### Zielgruppenprofil
-  Zu den Aufgaben des Dynamics 365-Modulbetreuers für den Kundendialog gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von Bedürfnissen, sowie Lösungen und Anwendungen zu konfigurieren. Der Modulbetreuer implementiert eine Lösung mit gebrauchsfertigen Funktionen, codefreier Erweiterungsmöglichkeit, sowie Anwendungs- und Service-Integrationen.
+  Zu den Aufgaben des Dynamics 365 Finance Functional Consultant gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von sowie Lösungen und Anwendungen zu konfigurieren. Der Modulbetreuer implementiert eine Lösung mit gebrauchsfertigen Funktionen, codefreier Erweiterungsmöglichkeit, sowie Anwendungs- und Service-Integrationen.
 prerequisitesSection: |-
   - Grundlegende Fertigungsfähigkeiten
   - Dynamics 365-Kernkompetenzen
 outlineSection: |-
   ### Modul 1&#58; Erste Schritte mit der Produktionssteuerung
-  In diesem Modul werden die im Modul Produktionssteuerung inFinance and Operations verwendeten Konzepte erläutert.
+  In diesem Modul werden die im Modul Produktionssteuerung in Finance and Operations verwendeten Konzepte erläutert.
 
   #### Lektionen
   - Einführung
@@ -160,8 +160,8 @@ outlineSection: |-
   - Wie erstellen eines Produktkonfigurationsmodells
 
 
-  ### Modul 8&#58; Erste Schritte in der Prozessverarbeitung
-  Dieses Thema behandelt den Einstieg in die Prozessverarbeitung in Finance and Operations.
+  ### Modul 8&#58; Erste Schritte mit schlanker Produktion
+  Dieses Thema behandelt den Einstieg in die schlanke Produktion in Finance and Operations.
 
   #### Lektionen
   - Einführung
@@ -350,3 +350,4 @@ outlineSection: |-
   - Kurszusammenfassung
 
   Du hast den Kurs abgeschlossen!
+
