--- a/learn-certs-pr/courses/mb-330t00.yml
+++ b/learn-certs-pr/courses/mb-330t00.yml
@@ -25,7 +25,7 @@ summary: |-
   In diesem Kurs wird das Supply Chain Management in der Dynamics 365-App-Suite erläutert
 
   #### Zielgruppenprofil
-  Zu den Aufgaben des Dynamics 365-Modulbetreuers für den Kundendialog gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von Bedürfnissen, sowie Lösungen und Anwendungen zu konfigurieren. Der Modulbetreuer implementiert eine Lösung mit gebrauchsfertigen Funktionen, codefreier Erweiterungsmöglichkeit, sowie Anwendungs- und Service-Integrationen.
+  Zu den Aufgaben des Dynamics 365 Finance Functional Consultant gehören Netzwerksuche, Erfassen von Bedürfnissen, die Einbeziehung von Fachexperten und Stakeholdern, das Übersetzen von sowie Lösungen und Anwendungen zu konfigurieren. Der Modulbetreuer implementiert eine Lösung mit gebrauchsfertigen Funktionen, codefreier Erweiterungsmöglichkeit, sowie Anwendungs- und Service-Integrationen.
 outlineSection: |-
   ### Modul 1&#58; Versorgungsmanagement
   Um das Inventar zu konfigurieren, sollte man zuerst den täglichen Betrieb des Inventars verstehen. In dieser Lektion werden zunächst eingehende und ausgehende Inventarisierungsvorgänge erläutert.
@@ -49,7 +49,7 @@ outlineSection: |-
   - Einheiten konfigurieren
 
 
-  ### Modul 2&#58; Verwenden von Inventarberichten
+  ### Modul 2&#58; Verwenden von Inventarprotokollen
   In diesem Abschnitt wird die Verwendung von Inventarjournalen in Finance and Operations erläutert.
   #### Lektionen
   - Einführung
@@ -238,7 +238,7 @@ outlineSection: |-
 
   Firmeninterner Handel ermöglicht es, das global verteilte Produktionsstätten, Vertriebszentren und Vertriebsniederlassungen als eine Organisation agieren.
 
-  In diesem Abschnitt wird das Konfigurieren und Verwenden der firmeninternenHandelsbeziehungen und das Verarbeiten von firmeninternen Aufträgen in Finance and Operations erläutert.
+  In diesem Abschnitt wird das Konfigurieren und Verwenden der firmeninternen Handelsbeziehungen und das Verarbeiten von firmeninternen Aufträgen in Finance and Operations erläutert.
   #### Lektionen
   - Einführung
   - Firmeninternen Handel verstehen
@@ -371,3 +371,4 @@ outlineSection: |-
   - Umfrage nach dem Kurs
 
   Du wirst haben den Kurs abgeschlossen.
+
