--- a/learn-certs-pr/courses/mb-700t00.yml
+++ b/learn-certs-pr/courses/mb-700t00.yml
@@ -5,7 +5,20 @@ metadata:
   description: 'Course MB-700T00-A: Microsoft Dynamics 365: Finance and Operations Apps Solution Architect'
 uid: course.mb-700t00
 courseNumber: 'MB-700T00-A'
-hoursToComplete: 120
+hoursToComplete: 72
+skillsGained:
+- skill: Kompetenzbereiche für die Rolle des Lösungsarchitekten festlegen
+- skill: Empfehlungen von Microsoft zu Instanzen und Bereitstellungsmodellen erläutern
+- skill: Cloud-Lösung, CDM & CDS verstehen
+- skill: Weitere Informationen zu Lizenzierung, AppSource und Support für Dynamics 365 erhalten
+- skill: Lifecycle-Services als Lösungsarchitekt verwenden
+- skill: Über Überlegungen zum Entwurf einer Dynamics 365-Lösung Bescheid wissen
+- skill: Konzepte und Tools für die Datenverwaltung verstehen
+- skill: Integrationsoptionen und Geschäftsereignisse für Lösungen erläutern
+- skill: Über verfügbare Optionen für Lösungslokalisierung, Compliance und Berichterstellung Bescheid wissen
+- skill: Architekturgespräche über Erweiterbarkeit, Sicherheit und Leistung führen
+- skill: Wissen, was ALM Application Lifecycle Management ist
+- skill: Möglichkeiten für automatisierte Tests und die Verwendung von RSAT identifizieren
 iconUrl: /media/learn/certification/course.svg
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
@@ -18,4 +31,44 @@ products:
 - dynamics
 exams:
 - uid: exam.mb-700
-summary: ""
+summary: |-
+  Dieser Kurs wurde für diejenigen entwickelt, die die Rolle des Lösungsarchitekten anstreben und neu darin sind. Dieser Kurs bietet technische Informationen zu Anwendungsarchitektur und technischen Fertigkeiten zum Einstieg in diese Rolle. Dieser Kurs deckt nicht die für diese Rolle erforderlichen gewerblichen Kompetenzen und Lieferfähigkeiten ab.
+
+  #### Zielgruppenprofil
+
+  Teilnehmer an diesem Kurs sollten bereits Erfahrung mit funktionalen oder technischen Schwerpunkten in Dynamics 365&#58; Finance and Operations Applications haben. In erster Linie für diejenigen, die eine neue Rolle als Lösungsarchitekt anstreben. 
+prerequisitesSection: |-
+  Sie müssen den Lösungsarchitekten-Lernpfad für Lösungsarchitekten abschließen&#58; [Hier](https://docs.microsoft.com/learn/browse/?roles=solution-architect&products=dynamics-finance-operations)
+outlineSection: |-
+  ### Modul 1&#58; Einführung
+
+  ### Modul 2&#58; Die Architektenrolle
+
+  ### Modul 3&#58; Umgebung, Instanzen und Bereitstellungsmodelle
+
+  ### Modul 4&#58; Cloud-Lösung, CDM & CDS
+
+  ### Modul 5&#58; Lizenzierung, AppSource & Support
+
+  ### Modul 6&#58; Lifecycle-Services 
+
+  ### Modul 7&#58; Blueprinting Dynamics 365-Lösungen
+
+  ### Modul 8&#58; Datenverwaltung
+
+  ### Modul 9&#58; Integrations- und Geschäftsereignisse
+
+  ### Modul 10&#58; Lokalisierung, Compliance und Berichterstellung
+
+  ### Modul 11&#58; Erweiterbarkeit
+
+  ### Modul 12&#58; Sicherheit
+
+  ### Modul 13&#58; Leistung
+
+  ### Modul 14&#58; Anwendung Lebenszyklus-Management 
+
+  ### Modul 15&#58; Automatisiertes Testen & RSAT
+
+  ### Modul 16&#58; Zusätzliche Bereiche für Architekten
+
