--- a/learn-certs-pr/d365-fundamentals.yml
+++ b/learn-certs-pr/d365-fundamentals.yml
@@ -5,16 +5,18 @@ metadata:
   description: 'Beweisen Sie, dass Sie Microsoft Dynamics 365 verstehen. Künstliche Intelligenz (KI); gemischte Realität (MR); die Power-Plattform; Cloud-Konzepte; Cloud-Sicherheit; Dynamics 365-Sicherheit; Gemeinsamer Daten-Service; Dynamics 365-Berichterstellung; Dynamics 365-Integrationen; und Cloud-Bereitstellung. '
 uid: certification.d365-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
-summary: |-
-  Beweisen Sie, dass Sie Microsoft Dynamics 365 verstehen. Künstliche Intelligenz (KI); gemischte Realität (MR); die Power-Plattform; Cloud-Konzepte; Cloud-Sicherheit; Dynamics 365-Sicherheit; Gemeinsamer Daten-Service; Dynamics 365-Berichterstellung; Dynamics 365-Integrationen; und Cloud-Bereitstellung.
+summary: 
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  
+  Beweisen Sie, dass Sie Microsoft Dynamics 365 verstehen. Künstliche Intelligenz; gemischte Realität; die Power-Plattform; Cloud-Konzepte; Cloud-Sicherheit; Dynamics 365-Sicherheit; Gemeinsamer Daten-Service; Dynamics 365-Berichterstellung; Dynamics 365-Integrationen; und Cloud-Bereitstellung.
 subTitle: 'Beweisen Sie, dass Sie Microsoft Dynamics 365 verstehen. Künstliche Intelligenz (KI); gemischte Realität (MR); die Power-Plattform; Cloud-Konzepte; Cloud-Sicherheit; Dynamics 365-Sicherheit; Gemeinsamer Daten-Service; Dynamics 365-Berichterstellung; Dynamics 365-Integrationen; und Cloud-Bereitstellung.'
 levels:
 - beginner
 skills:
 - Identifizieren Sie Microsoft-Plattformkomponenten für Dynamics 365
-- Verstehen Sie KI und Mixed Reality für Dynamics 365
-- Understand model-driven apps
-- Grundlegendes zu Dynamics 365 Finance- und Operations-Apps
+- Beschreiben künstlicher Intelligenz und gemischter Realität in Dynamics 365
+- Beschreiben modellbasierter Apps
+- Beschreiben von Finanz- und Betriebsanwendungen
 roles:
 - functional-consultant
 type: fundamentals
@@ -28,11 +30,11 @@ pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUj
 exams:
 - uid: exam.mb-901
 resources:
-- title: Lernpfad zur Zertifizierung
+- title: Lernpfad zur Zertifizirung
   description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Dynamics 365 Fundamentals.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4pHPx
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
@@ -46,3 +48,4 @@ resources:
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
+
