--- a/learn-certs-pr/data-analyst-associate.yml
+++ b/learn-certs-pr/data-analyst-associate.yml
@@ -2,13 +2,13 @@
 title: 'Microsoft Certified: Data Analyst Associate'
 metadata:
   title: 'Microsoft Certified: Data Analyst Associate'
-  description: Data Analysts verhilft Unternehmen, den Wert ihrer Datenbestände mit Hilfe von Microsoft Power BI zu maximieren.
+  description: 'Data Analysts verhilft Unternehmen, den Wert ihrer Datenbestände mit Hilfe von Microsoft Power BI zu maximieren.'
 uid: certification.data-analyst-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+
   Data Analysts verhilft Unternehmen, den Wert ihrer Datenbestände mit Hilfe von Microsoft Power BI zu maximieren. Als Fachexperte sind Datenanalysten dafür verantwortlich, skalierbare Datenmodelle zu entwerfen und zu erstellen, Daten zu bereinigen und zu transformieren und erweiterte Analysefunktionen zu ermöglichen, die durch leicht verständliche Datenvisualisierungen einen aussagekräftigen Geschäftswert bieten.
-  
-  <div style='color&#58; red;'><br/><strong>Hinweis&#58; Diese Zertifizierung ist erst am 2. April 2020 verfügbar</strong> Diese Informationen sind nicht endgültig und es können geringfügige Änderungen auftreten, sobald die Zertifizierung veröffentlicht wird.</div>
 subTitle: Data Analysts verhilft Unternehmen, den Wert ihrer Datenbestände mit Hilfe von Microsoft Power BI zu maximieren.
 levels:
 - intermediate
@@ -28,7 +28,7 @@ exams:
 - uid: exam.da-100
 resources:
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
@@ -42,3 +42,4 @@ resources:
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
+
