--- a/learn-certs-pr/exams/da-100.yml
+++ b/learn-certs-pr/exams/da-100.yml
@@ -6,12 +6,14 @@ metadata:
 uid: exam.da-100
 displayName: DA-100
 summary: |-
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+
   Data Analysts verhilft Unternehmen, den Wert ihrer Datenbestände mit Hilfe von Microsoft Power BI zu maximieren. Als Fachexperte sind Datenanalysten dafür verantwortlich, skalierbare Datenmodelle zu entwerfen und zu erstellen, Daten zu bereinigen und zu transformieren und erweiterte Analysefunktionen zu ermöglichen, die durch leicht verständliche Datenvisualisierungen einen aussagekräftigen Geschäftswert bieten. Datenanalysten arbeiten auch mit wichtigen Stakeholdern in verschiedenen Branchen zusammen, um relevante Erkenntnisse basierend auf den identifizierten Geschäftsanforderungen zu liefern.
   <br/>
 
   Der Datenanalyst sollte ein grundlegendes Verständnis der Datenbestände und der Datenverarbeitung sowohl vor Ort als auch in der Cloud haben.
 
-  <div style='color&#58; red;'><br/><strong>Hinweis&#58; Dieses Beta-Examen ist erst ab 2. April 2020 verfügbar.</strong> Diese Informationen sind nicht endgültig und es kann zu geringfügigen Änderungen kommen, nachdem das Examen veröffentlicht wurde.</div>
+  <div style='font-weight&#58; bold;'><br/>Beta-Prüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. Um mehr zu erfahren <a href="/learn/certifications/certification-exams#participating-in-beta-exams">about the value and importance of beta exams</a>.</div>
 subTitle: 'Dieses Examen misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Vorbereitung von Daten; Modellieren von Daten; Visualisieren von Daten; Daten analysieren und Ergebnisse anwenden und aktualisieren. '
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4qlRu
@@ -25,7 +27,7 @@ skills:
 - Modellieren Sie die Daten (25-30%)
 - Visualisieren Sie die Daten (20-25%)
 - Analysieren Sie die Daten (10-15%)
-- Bereitstellung und Verwalten der Ergebnisse (10-15%)
+- Bereitstellen und Verwalten von Ergebnissen (10-15%)
 roles:
 - data-analyst
 products:
@@ -35,7 +37,7 @@ relatedCertifications:
     uid: certification.data-analyst-associate
 resources:
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
@@ -55,3 +57,4 @@ resources:
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
+
