--- a/learn-certs-pr/exams/mb-901.yml
+++ b/learn-certs-pr/exams/mb-901.yml
@@ -1,4 +1,4 @@
-﻿### YamlMime:Examination
+### YamlMime:Examination
 title: Microsoft Dynamics 365 Fundamentals
 metadata:
   title: 'Exam MB-901: Microsoft Dynamics 365 Fundamentals'
@@ -6,31 +6,37 @@ metadata:
 uid: exam.mb-901
 displayName: MB-901
 summary: |-
+  <div>
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am April 2017 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
+  </div>
+
   Dieses Examen behandelt die Positionierung und die Vorteile der Einführung von Dynamics 365.
-  
+
   Die Kandidaten sollten über ein funktionales Verständnis der Dynamics 365-Funktionen und des Microsoft Cloud Computing verfügen.
 
   Die Kandidaten dieser Prüfung sollten über allgemeine Kenntnisse oder einschlägige Berufserfahrung in einer Umgebung der Informationstechnologie (IT) verfügen. Die Kandidaten sollten auch über ein grundlegendes Verständnis von Geschäftsszenarien und Erfahrungen bei der Bewältigung von Geschäfts-, Rechts- und Sicherheitsanforderungen für IT-Projekte verfügen.
-subTitle: Dieses Examen misst Ihre Fähigkeit, Microsoft Dynamics 365 zu verstehen. künstliche Intelligenz (KI); gemischte Realität (MR); die Energieplattform; Cloud-Konzepte; Cloud-Sicherheit; rollenbasierte Sicherheit in Dynamics 365; Gemeinsamer Datendienst; Datenverwaltungsrahmen; Dynamics 365-Berichterstellung; Dynamics 365-Integrationen; und Cloud-Bereitstellung.
+subTitle: Dieses Examen misst Ihre Fähigkeit, Microsoft Dynamics 365 zu verstehen. künstliche Intelligenz; gemischte Realität; die Energieplattform; Cloud-Konzepte; Cloud-Sicherheit; rollenbasierte Sicherheit in Dynamics 365; Gemeinsamer Datendienst; Datenverwaltungsrahmen; Dynamics 365-Berichterstellung; Dynamics 365-Integrationen; und Cloud-Bereitstellung.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4n1DO
 locales:
 - en
 providers:
-  - providerType: pearson-vue
-    examUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MB-901&examname=Exam%20MB-901:%20Microsoft%20Dynamics%20365%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-901
-  - providerType: certiport
-    examUrl: http://www.certiport.com/locator
+- providerType: pearson-vue
+  examUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-901&examname=Exam%20MB-901:%20Microsoft%20Dynamics%20365%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-901
+- providerType: certiport
+  examUrl: http://www.certiport.com/locator
 levels:
 - beginner
 skills:
+- Der Inhalt dieser Prüfung wurde am April 2017 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.
 - Identifizieren Sie Microsoft-Plattformkomponenten für Dynamics 365 (30-35%).
-- KI und gemischte Realität für Dynamics 365 verstehen (10-15%)
-- Modellgesteuerte Apps verstehen (25-30%)
-- Dynamics 365 Finance and Operations-Apps verstehen (25-30%)
+- Beschreiben künstlicher Intelligenz und gemischter Realität in Dynamics 365 (10-15%)
+- Beschreiben modellbasierter Apps (25-30%)
+- Beschreiben von Finanz- und Betriebsanwendungen (25-30%)
 roles:
 - functional-consultant
-products: 
+products:
 - dynamics
 courses:
 - uid: course.mb-901t00
@@ -40,7 +46,7 @@ relatedCertifications:
 - related:
     uid: certification.d365-fundamentals
 resources:
-- title: Lernpfad zur Zertifizierung
+- title: Lernpfad zur Zertifizirung
   description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Dynamics 365 Fundamentals.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4pHPx
 - title: Schulungs- und Zertifizierungsleitfaden
@@ -61,3 +67,4 @@ resources:
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
+
