--- a/learn-certs-pr/microsoft-365-fundamentals.yml
+++ b/learn-certs-pr/microsoft-365-fundamentals.yml
@@ -1,19 +1,22 @@
 ### YamlMime:Certification
-title: Microsoft 365 Certified Fundamentals
+title: 'Microsoft 365 Certified: Fundamentals'
 metadata:
-  title: Microsoft 365 Certified Fundamentals
-  description: Zeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementierung des Microsoft 365 Cloud Dienstes.
+  title: 'Microsoft 365 Certified: Fundamentals'
+  description: 'Zeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementieren des Microsoft 365 Cloud Dienstes.'
 uid: certification.microsoft-365-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
-summary: Zeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementierung des Microsoft 365 Cloud Dienstes.
-subTitle: Zeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementierung des Microsoft 365 Cloud Dienstes.
+summary: |-
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+
+  Zeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementieren des Microsoft 365 Cloud Dienstes.
+subTitle: Zeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementieren des Microsoft 365 Cloud Dienstes.
 levels:
 - beginner
 skills:
-- Verstehen von Cloud-Konzepten
-- Verstehen von Microsoft 365 Kernservices und Konzepten
-- Verstehen von Sicherheit, Compliance, Datenschutz und Schutz in Microsoft 365
-- Verstehen der Microsoft 365 Preisgebung und des Support
+- Cloud-Konzepte beschreiben
+- Beschreiben der wichtigsten Microsoft 365-Dienste und -Konzepte
+- Beschreiben der Sicherheits-, Compliance-, Datenschutz- und Vertrauensoptionen in Microsoft 365
+- Beschreiben der Preis- und Supportoptionen für Microsoft 365
 roles:
 - business-user
 - administrator
@@ -31,20 +34,21 @@ exams:
 - uid: exam.ms-900
 resources:
 - title: Lernpfad zur Zertifizirung
-  description: 'Entdecken Sie die Schulungsressourcen, um Microsoft 365 Certified Fundamentals.'
+  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Fundamentals.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35svT
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Prüfungswiederholung
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: deals.md
 - title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
+
