--- a/learn-certs-pr/azure-administrator.yml
+++ b/learn-certs-pr/azure-administrator.yml
@@ -1,21 +1,23 @@
-﻿### YamlMime:Certification
+### YamlMime:Certification
 title: 'Microsoft Certified: Azure Administrator Associate'
 metadata:
   title: 'Microsoft Certified: Azure Administrator Associate'
-  description: Azure-Administratoren implementieren, überwachen und warten Microsoft Azure-Lösungen, einschließlich wichtiger Dienste in den Bereichen Computer, Speicher, Netzwerk und Sicherheit.
+  description: 'Azure-Administratoren implementieren, überwachen und warten Microsoft Azure-Lösungen, einschließlich wichtiger Dienste in den Bereichen Computer, Speicher, Netzwerk und Sicherheit.'
 uid: certification.azure-administrator
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+
   Azure-Administratoren implementieren, überwachen und warten Microsoft Azure-Lösungen, einschließlich wichtiger Dienste in den Bereichen Computer, Speicher, Netzwerk und Sicherheit.
 subTitle: Azure-Administratoren implementieren, überwachen und warten Microsoft Azure-Lösungen, einschließlich wichtiger Dienste in den Bereichen Computer, Speicher, Netzwerk und Sicherheit.
 levels:
 - intermediate
 skills:
-- Azure-Abonnements und Ressourcen verwalten
+- Verwalten von Azure-Identitäten und -Governance
 - Speicherplatz implementieren und verwalten
-- Bereitstellen und Verwalten von virtuellen Maschinen (VMs)
-- Konfiguration und Verwaltung virtueller Netzwerke
-- Identitäten verwalten Kommentar
+- Bereitstellen und Verwalten von Azure-Rechenressourcen
+- Virtuelle Netzwerke konfigurieren und verwalten
+- Überwachen und Sichern von Azure-Ressourcen
 roles:
 - administrator
 type: role-based
@@ -27,7 +29,7 @@ products:
 - azure-virtual-network
 - azure-resource-manager
 courses:
-- uid: course.az-103t00
+- uid: course.az-104t00
 paths:
 - uid: learn.administer-infrastructure-resources-in-azure
 - uid: learn.architect-storage-infrastructure
@@ -42,7 +44,7 @@ paths:
 - uid: learn.administer-containers-in-azure
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwUF
 exams:
-- uid: exam.az-103
+- uid: exam.az-104
 resources:
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
@@ -54,8 +56,9 @@ resources:
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: deals.md
 - title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Werktags (Montag-Freitag) wird Ihnen ein Forenmoderator antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
+
