--- a/learn-certs-pr/d365-finance-and-operations-apps-developer-associate.yml
+++ b/learn-certs-pr/d365-finance-and-operations-apps-developer-associate.yml
@@ -2,11 +2,14 @@
 title: 'Microsoft Certified: Dynamics 365: Finance and Operations Apps Developer Associate'
 metadata:
   title: 'Microsoft Certified: Dynamics 365: Finance and Operations Apps Developer Associate'
-  description: Entwickler, die mit Finance and Operations Apps in Microsoft Dynamics 365 arbeiten, implementieren und erweitern Anwendungen, um die Anforderungen des Unternehmens zu erfüllen. Die Kandidaten bieten vollständig realisierte Lösungen durch standardisierte Anwendungscodierungsmuster, erweiterbare Funktionen und externe Integrationen.
+  description: Developers (Entwickler), die mit Finance and Operations Apps in Microsoft Dynamics 365 arbeiten, implementieren und erweitern Anwendungen, um die Anforderungen des Unternehmens zu erfüllen. Die Kandidaten bieten vollständig realisierte Lösungen durch standardisierte Anwendungscodierungsmuster, erweiterbare Funktionen und externe Integrationen.
 uid: certification.d365-finance-and-operations-apps-developer-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: Entwickler, die mit Finance and Operations Apps in Microsoft Dynamics 365 arbeiten, implementieren und erweitern Anwendungen, um die Anforderungen des Unternehmens zu erfüllen. Die Kandidaten bieten vollständig realisierte Lösungen durch standardisierte Anwendungscodierungsmuster, erweiterbare Funktionen und externe Integrationen.
-subTitle: Entwickler, die mit Finance and Operations Apps in Microsoft Dynamics 365 arbeiten, implementieren und erweitern Anwendungen, um die Anforderungen des Unternehmens zu erfüllen.
+summary: |-
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+
+  Developers (Entwickler), die mit Finance and Operations Apps in Microsoft Dynamics 365 arbeiten, implementieren und erweitern Anwendungen, um die Anforderungen des Unternehmens zu erfüllen. Die Kandidaten bieten vollständig realisierte Lösungen durch standardisierte Anwendungscodierungsmuster, erweiterbare Funktionen und externe Integrationen.
+subTitle: Developers (Entwickler), die mit Finance and Operations Apps in Microsoft Dynamics 365 arbeiten, implementieren und erweitern Anwendungen, um die Anforderungen des Unternehmens zu erfüllen.
 levels:
 - intermediate
 skills:
@@ -46,18 +49,22 @@ exams:
 - uid: exam.mb-300
 - uid: exam.mb-500
 resources:
+- title: Lernpfad zur Zertifizirung
+  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Dynamics 365: Finance and Operations Apps Developer Associate.'
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4o4j5
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Prüfungswiederholung
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: deals.md
 - title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
+
