--- a/learn-certs-pr/d365-finance-and-operations-apps-solution-architect-expert.yml
+++ b/learn-certs-pr/d365-finance-and-operations-apps-solution-architect-expert.yml
@@ -2,18 +2,18 @@
 title: 'Microsoft Certified: Dynamics 365: Finance and Operations Apps Solution Architect Expert'
 metadata:
   title: 'Microsoft Certified: Dynamics 365: Finance and Operations Apps Solution Architect Expert'
-  description: Lösungsarchitekten für Finance and Operations Apps in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die sich mit den Unternehmen und den Mitgliedern des Implementierungsteams beraten, um  für die Anforderungen des Unternehmens klar definierte, kostengünstige Lösungen  zu entwickeln.
+  description: Solution Architects (Lösungsarchitekten) für Finance and Operations Apps in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die sich mit den Unternehmen und den Mitgliedern des Implementierungsteams beraten, um für die Anforderungen des Unternehmens klar definierte, kostengünstige Lösungen zu entwickeln.
 uid: certification.d365-finance-and-operations-apps-solution-architect-expert
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
-summary: >-
-  Lösungsarchitekten für Finance and Operations Apps in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die sich mit den Unternehmen und den Mitgliedern des Implementierungsteams beraten, um  für die Anforderungen des Unternehmens klar definierte, kostengünstige Lösungen  zu entwickeln.
+summary: |-
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
 
-
-  <div style="color:red"><br/><strong>HINWEIS&#58; Diese Zertifizierung ist erst ab dem 27. Januar 2020 verfügbar.</strong></div>
-subTitle: Lösungsarchitekten für Finance and Operations Apps in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die sich mit den Unternehmen und den Mitgliedern des Implementierungsteams beraten, um  für die Anforderungen des Unternehmens klar definierte, kostengünstige Lösungen  zu entwickeln.
+  Solution Architects (Lösungsarchitekten) für Finance and Operations Apps in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die sich mit den Unternehmen und den Mitgliedern des Implementierungsteams beraten, um für die Anforderungen des Unternehmens klar definierte, kostengünstige Lösungen zu entwickeln.
+subTitle: Solution Architects (Lösungsarchitekten) für Finance and Operations Apps in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die sich mit den Unternehmen und den Mitgliedern des Implementierungsteams beraten, um für die Anforderungen des Unternehmens klar definierte, kostengünstige Lösungen zu entwickeln.
 levels:
 - advanced
 skills:
+- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
 - Identifizieren von Lösungsanforderungen
 - Entwerfen von Lösungskomponenten
 - Definition von Lösungstest- und Managementstrategien
@@ -22,6 +22,13 @@ roles:
 type: role-based
 products:
 - dynamics
+courses:
+- uid: course.mb-700t00
+paths:
+- uid: learn-dynamics.become-solution-architect
+pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE44g0Q
+exams:
+- uid: exam.mb-700
 prerequisites:
 - uid: certification.d365-functional-consultant-financials
   isOptional: false
@@ -31,22 +38,20 @@ prerequisites:
   isOptional: false
 - uid: certification.d365-finance-and-operations-apps-developer-associate
   isOptional: false
-pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE44g0Q
-exams:
-- uid: exam.mb-700
 resources:
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Prüfungswiederholung
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: deals.md
 - title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
+
