--- a/learn-certs-pr/d365-functional-consultant-marketing.yml
+++ b/learn-certs-pr/d365-functional-consultant-marketing.yml
@@ -2,17 +2,20 @@
 title: 'Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate'
-  description: Microsoft Dynamics 365 Marketing Functional Consultants richten Lösungen ein, die Leads gewinnen und konvertieren, Markenbekanntheit aufbauen, Omni-Channel-Messaging standardisieren und Marketinginformationen liefern.
+  description: 'Microsoft Dynamics 365 Marketing Functional Consultants richten Lösungen ein, die Leads gewinnen und konvertieren, Markenbekanntheit aufbauen, Omni-Channel-Messaging standardisieren und Marketinginformationen liefern.'
 uid: certification.d365-functional-consultant-marketing
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: Microsoft Dynamics 365 Marketing Functional Consultants richten Lösungen ein, die Leads gewinnen und konvertieren, Markenbekanntheit aufbauen, Omni-Channel-Messaging standardisieren und Marketinginformationen liefern.
+summary: |-
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+
+  Microsoft Dynamics 365 Marketing Functional Consultants richten Lösungen ein, die Leads gewinnen und konvertieren, Markenbekanntheit aufbauen, Omni-Channel-Messaging standardisieren und Marketinginformationen liefern.
 subTitle: Microsoft Dynamics 365 Marketing Functional Consultants richten Lösungen ein, die Leads gewinnen und konvertieren, Markenbekanntheit aufbauen, Omni-Channel-Messaging standardisieren und Marketinginformationen liefern.
 levels:
 - intermediate
 skills:
-- Durchführung von Ermittlung, Planung und Analyse
-- Verwalten des Benutzererlebnisdesigns
-- Verwalten von Einheiten und Daten
+- Erkennen von Anforderungen, Analyse und Planung
+- Erstellen und Verwalten des Benutzererlebnisdesigns
+- Verwalten von Entitäten und Daten
 - Sicherheit implementieren
 - Integration implementieren
 - Durchführung von Lösungsimplementierungen und Tests
@@ -21,8 +24,8 @@ skills:
 - Marketingformulare und Seiten erstellen und verwalten
 - Leads verwalten
 - Erstellen und Verwalten von Marketing-E-Mails
-- Verwalten von Kundenreisen
-- Verwalten von Veranstaltungen und Webinaren
+- Kunden-Journeys verwalten
+- Verwaltung von Veranstaltungen und Webinaren
 - Konfigurieren und Analysieren von Kundenreaktionen
 roles:
 - functional-consultant
@@ -48,20 +51,21 @@ exams:
 - uid: exam.mb-220
 resources:
 - title: Lernpfad zur Zertifizirung
-  description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate.'
+  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35I7b
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Prüfungswiederholung
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: deals.md
 - title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
+
