--- a/learn-certs-pr/exams/70-339.yml
+++ b/learn-certs-pr/exams/70-339.yml
@@ -6,11 +6,14 @@ metadata:
 uid: exam.70-339
 displayName: 70-339
 summary: |-
-  <div style='color&#58; red;'>Dieses Examen wird am 30. Juni 2020 eingestellt. Eine Ersatzprüfung kann verfügbar sein. Um mehr zu erfahren, besuchen Sie unseren Blog: <a href="https://www.microsoft.com/en-us/learning/community.aspx">https://www.microsoft.com/en-us/learning/community.aspx</a> und überprüfen Sie unsere Prüfungsabgaben. Hinweis: Prüfungen werden um 23:59 Uhr Central Standard Time eingestellt<br/><br/></div>
-  
+  <div>
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div><strong>Diese Prüfung wird am 31. Januar 2021 um 23&#58;59 Uhr (Ortszeit) eingestellt. Nach diesem Datum können Sie die Prüfung nicht mehr ablegen. Erfahren Sie mehr über <a href='/learn/certifications/retired-certification-exams'>bevorstehende Prüfungseinstellungen</a>.<br/><br/></strong></div>
+  </div>
+
   Die Prüfung ist für erfahrene IT-Experten gedacht, die SharePoint 2016 in einem Rechenzentrum und in der Cloud installieren, konfigurieren, bereitstellen und verwalten. Kandidaten haben in der Regel mehr als vier Jahre Erfahrung in der Planung und Verwaltung von SharePoint und anderen Kerntechnologien, von denen SharePoint abhängt, einschließlich Windows Server 2008 R2 oder höher, Internet Information Services (IIS), SQL Server 2008 R2 oder höher, Active Directory und Netzwerkinfrastrukturdienste.
 
-  Kandidaten sollten außerdem Erfahrung mit der Verwaltung der Business Continuity, einschließlich Datensicherung, Datenwiederherstellung und hoher Verfügbarkeit, sowie Erfahrung mit Authentifizierungs- und Sicherheitstechnologien haben. PowerShell-Erfahrung wird sehr begrüßt.
+  Kandidaten sollten außerdem Erfahrung mit der Verwaltung der Unternehmenskontinuität haben, einschließlich Datensicherung, Datenwiederherstellung und hoher Verfügbarkeit, sowie Erfahrung mit Authentifizierungs- und Sicherheitstechnologien haben. PowerShell-Erfahrung wird stark bevorzugt.
 
   Die sekundäre Zielgruppe für diese Prüfung sind Geschäftsanwendungsadministratoren (Business Application Administrators; BAAs), die aktiv an Line-of-Business-(LOB-)Projekten mit internen Geschäftskunden beteiligt sind, die mit SharePoint 2016 arbeiten.
 subTitle: Die Prüfung ist für erfahrene IT-Experten gedacht, die SharePoint 2016 in einem Rechenzentrum und in der Cloud installieren, konfigurieren, bereitstellen und verwalten. Kandidaten haben in der Regel mehr als vier Jahre Erfahrung in der Planung und Verwaltung von SharePoint und anderen Kerntechnologien, von denen SharePoint abhängt, einschließlich Windows Server 2008 R2 oder höher, Internet Information Services (IIS), SQL Server 2008 R2 oder höher, Active Directory und Netzwerkinfrastrukturdienste.
@@ -27,17 +30,18 @@ locales:
 - de
 - ja
 - pt-br
-levels: 
+levels:
 - intermediate
 skills:
 - 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
-- Design der SharePoint-Infrastruktur (15 bis 20 %)
-- Planen von Authentifizierung und Sicherheit (15–20 %)
-- Planen der Workload-Optimierung (15–20 %)
+- Design der SharePoint-Infrastruktur (15-20 %)
+- Planen von Authentifizierung und Sicherheit (15–20%)
+- Planen der Workload-Optimierung (15–20%)
 - Produktivitätslösungen planen (15-20%)
 - Verwalten von Suchfunktionen (10–15 %)
-- Planen und Konfigurieren von Clouddiensten (5–10 %)
-- Überwachen und Optimieren einer SharePoint-Umgebung (10–15 %)
+- Planen und Konfigurieren von Clouddiensten (5–10%)
+- Überwachen und Optimieren einer SharePoint-Umgebung (10–15%)
+retirementDate: 01/31/2021
 roles:
 - administrator
 products:
@@ -61,3 +65,4 @@ resources:
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
+
