--- a/learn-certs-pr/exams/az-103.yml
+++ b/learn-certs-pr/exams/az-103.yml
@@ -1,4 +1,4 @@
-﻿### YamlMime:Examination
+### YamlMime:Examination
 title: Microsoft Azure Administrator
 metadata:
   title: 'Exam AZ-103: Microsoft Azure Administrator'
@@ -6,18 +6,23 @@ metadata:
 uid: exam.az-103
 displayName: AZ-103
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>EINE NEUE VERSION DIESES EXAMENS, AZ-104, WIRD AM ODER UM DEN Dienstag, 31. März 2020 VERFÜGBAR SEIN. Sie können dieses Examen ablegen, bis es am oder um den 30. Juni 2020 eingestellt wird. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.<br/><br/></div>
-  
+  <div>
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>EINE NEUE VERSION DIESES EXAMENS, <a href="/learn/certifications/exams/az-104">AZ-104</a>, WURDE AM 2 APRIL 2020 BEREITGESTELLT. Sie können dieses Examen ablegen, bis es am oder um den Montag, 31. August 2020 eingestellt wird. Hinweis&#58; Prüfungen werden um 23&#58;59 Uhr Central Standard Time eingestellt.<br/><br/></div>
+  </div>
+
   Ab dem 1. Mai 2019 müssen Sie nur noch die Exam AZ-103 ablegen, um diese Zertifizierung zu erhalten. Diese neue Prüfung kombiniert die Kompetenzen von AZ-100 und AZ-101 (die am 1. Mai 2019 aus dem Programm genommen wurden), während der Großteil der neuen Prüfung aus AZ-100 stammt.
 
   Kandidaten für diese Prüfung sind Azure-Administratoren, die Cloud-Services verwalten, die Speicher-, Sicherheits-, Netzwerk- und Cloud-Funktionen umfassen. Kandidaten haben ein tiefes Verständnis für jeden Service über den gesamten IT-Lebenszyklus hinweg und nehmen Anfragen für Infrastrukturdienste, Anwendungen und Umgebungen entgegen. Sie geben Empfehlungen zur Nutzung von Diensten für eine optimale Leistung und Skalierung sowie zur Bereitstellung, Größe, Überwachung und Anpassung von Ressourcen.
 
   Die Kandidaten für diese Prüfung sollten über Kenntnisse in der Verwendung von PowerShell, der Befehlszeilenschnittstelle, dem Azure Portal, ARM-Vorlagen, Betriebssystemen, Virtualisierung, Cloud-Infrastruktur, Speicherstrukturen und Netzwerken verfügen.
+
+  <div style='font-weight&#58; bold;'><br/>NOTE&#58; Wenn Sie dieses Examen bestehen, erhalten Sie die folgende Zertifizierung&#58; <a href="/learn/certifications/azure-administrator">Microsoft Certified&#58; Azure Administrator Associate</a>.</div>
 subTitle: 'Ab dem 1. Mai 2019 müssen Sie nur noch die Exam AZ-103 ablegen, um diese Zertifizierung zu erhalten. Diese neue Prüfung kombiniert die Kompetenzen von AZ-100 und AZ-101 (die am 1. Mai 2019 aus dem Programm genommen wurden), während der Großteil der neuen Prüfung aus AZ-100 stammt. Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Verwalten von Azure-Abonnements und -Ressourcen, Implementieren und Verwalten von Speicher, Bereitstellen und Verwalten von virtuellen Maschinen (VMs), Konfigurieren und Verwalten virtueller Netzwerke und Verwalten von Identitäten.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwUR
 practiceTestUrl: https://us.mindhub.com/p/MU-AZ-103?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-103&examname=Exam%20AZ-103:%20Microsoft%20Azure%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-103
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-103&examname=Exam%20AZ-103:%20Microsoft%20Azure%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-103
 locales:
 - en
 - ja
@@ -26,13 +31,14 @@ locales:
 levels:
 - intermediate
 skills:
-- EINE NEUE VERSION DIESES EXAMENS, AZ-104, WIRD AM ODER UM DEN 31. MÄRZ 2020 VERFÜGBAR SEIN. Sie können dieses Examen ablegen, bis es am oder um den 30. Juni 2020 eingestellt wird. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.
+- EINE NEUE VERSION DIESES EXAMENS, AZ -104, WURDE AM 2 APRIL 2020 BEREITGESTELLT.  Sie können dieses Examen ablegen, bis es am oder um den Montag, 31. August 2020 eingestellt wird. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, sich geändert hat.
 - 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
 - Verwaltung von Azure-Abonnements und Ressourcen (15-20%)
-- Implementieren und Verwalten von Speicherplatz (15-20%)
+- Speicherplatz implementieren und verwalten (15-20%)
 - Bereitstellen und Verwalten von virtuellen Maschinen (VMs) (15-20%)
-- Virtuelle Netzwerke konfigurieren und verwalten (30-35%)
+- Virtuelle Vernetzung konfigurieren und verwalten (30-35%)
 - Identitäten verwalten (15-20%)
+retirementDate: 08/31/2020
 roles:
 - administrator
 products:
@@ -58,7 +64,7 @@ paths:
 - uid: learn.administer-containers-in-azure
 relatedCertifications:
 - related:
-    uid: certification.azure-administrator
+    uid: none
 resources:
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
@@ -81,3 +87,4 @@ resources:
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
+
