--- a/learn-certs-pr/exams/az-120.yml
+++ b/learn-certs-pr/exams/az-120.yml
@@ -1,4 +1,4 @@
-﻿### YamlMime:Examination
+### YamlMime:Examination
 title: 'Planning and Administering Microsoft Azure for SAP Workloads'
 metadata:
   title: 'Exam AZ-120: Planning and Administering Microsoft Azure for SAP Workloads'
@@ -6,6 +6,8 @@ metadata:
 uid: exam.az-120
 displayName: AZ-120
 summary: |-
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+
   Kandidaten für diese Prüfung sind Architekten und Ingenieure, die über Kenntnisse des SAP Landscape Certification Prozesses und von Industriestandards verfügen, die für den langfristigen Betrieb einer SAP-Lösung spezifisch sind. Die Kandidaten geben Empfehlungen zu den Dienstleistungen ab und passen die Ressourcen nach Bedarf an, um eine optimale Belastbarkeit, Leistung, Größenordnung, Bereitstellung, Größe und Überwachung zu gewährleisten.
 
   Architekten von Azure for SAP Workloads sollten über umfangreiche Erfahrungen und Kenntnisse in den Bereichen SAP-Anwendungen, SAP HANA, S/4HANA, SAP NetWeaver, SAP BW, OS Server für SAP-Anwendungen und Datenbanken, Azure Portal, ARM-Templates, Betriebssysteme, Virtualisierung, Cloud-Infrastruktur, Speicherstrukturen, Hochverfügbarkeitsdesign, Disaster-Recovery-Design, Datensicherungskonzepte und Networking verfügen.
@@ -14,23 +16,27 @@ summary: |-
 subTitle: 'Diese Prüfung misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erledigen: SAP-Workloads nach Azure übertragen, eine Azure-Lösung zur Unterstützung von SAP-Workloads entwickeln, Azure-SAP-Workloads erstellen und bereitstellen, Azure-Infrastruktur für SAP-Workloads validieren und die Azure-SAP-Architektur operationalisieren.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43XOu
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-120&examname=Exam%20AZ-120:%20Planning%20and%20Administering%20Microsoft%20Azure%20for%20SAP%20Workloads&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-120
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-120&examname=Exam%20AZ-120:%20Planning%20and%20Administering%20Microsoft%20Azure%20for%20SAP%20Workloads&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-120
 locales:
 - en
+- ja
+- zh-cn
+- ko
 levels:
 - advanced
 skills:
 - 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
 - SAP-Workloads nach Azure übertragen (10-15%)
-- Eine Azure-Lösung zur Unterstützung von SAP-Workloads entwickeln (20-25%)
+- Erstellen einer Azure-Lösung zur Unterstützung von SAP-Workloads (20-25%)
 - Erstellen und Bereitstellen von Azure SAP Workloads (35-40%)
-- Azure Infrastructure für SAP-Workloads überprüfen (10-15%)
+- Azure-Infrastruktur für SAP-Workloads überprüfen (10-15%)
 - Operationalisieren der Azure SAP-Architektur (10-15%)
 roles:
 - solution-architect
 - devops-engineer
 products:
 - azure
+- azure-sap
 courses:
 - uid: course.az-120t00
 paths:
@@ -62,3 +68,4 @@ resources:
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
+
