--- a/learn-certs-pr/exams/az-203.yml
+++ b/learn-certs-pr/exams/az-203.yml
@@ -1,4 +1,4 @@
-﻿### YamlMime:Examination
+### YamlMime:Examination
 title: Developing Solutions for Microsoft Azure
 metadata:
   title: 'Exam AZ-203: Developing Solutions for Microsoft Azure'
@@ -6,8 +6,11 @@ metadata:
 uid: exam.az-203
 displayName: AZ-203
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'> EINE NEUE VERSION DIESES EXAMENS, <a href="/learn/certifications/exams/az-204">AZ-204</a>, WURDE AM 24. FEBRUAR BEREITGESTELLT. Sie können dieses Examen ablegen, bis es am 31. Mai 2020 eingestellt wird. Hinweis: Prüfungen werden um 23:59 Uhr Central Standard Time eingestellt.<br/><br/></div>
-  
+  <div>
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>EINE NEUE VERSION DIESES EXAMENS, <a href="/learn/certifications/exams/az-204">AZ-204</a>, WURDE AM 24. FEBRUAR BEREITGESTELLT. Sie können dieses Examen ablegen, bis es am oder um den Montag, 31. August 2020 eingestellt wird. Hinweis&#58; Prüfungen werden um 23&#58;59 Uhr Central Standard Time eingestellt.<br/><br/></div>
+  </div>
+
   Kandidaten für diese Prüfung sind Azure Entwickler, die Cloud-Lösungen wie Anwendungen und Services entwerfen und bauen. Sie nehmen an allen Phasen der Entwicklung teil, vom Lösungsdesign über die Entwicklung und Bereitstellung bis hin zu Test und Wartung. Sie arbeiten mit Cloud Solution Architects, Cloud DBAs, Cloud Administratoren und Clients zusammen, um die Lösung zu implementieren.
   <br/>
 
@@ -15,7 +18,7 @@ summary: |-
 
   Die Kandidaten müssen über mindestens ein Jahr Erfahrung in der Entwickeln skalierbarer Lösungen in allen Phasen der Softwareentwicklung verfügen und über Kenntnisse in mindestens einer Cloud-gestützten Programmiersprache verfügen.
 
-  <div style='color&#58; red; font-weight&#58; bold;'><br/>HINWEIS&#58; Wenn Sie dieses Examen bestehen, erhalten Sie die folgende Zertifizierung&#58; <a href="https://docs.microsoft.com/learn/certifications/azure-developer">Microsoft Certified&#58; Azure Developer Associate</a>.</div>
+  <div style='font-weight&#58; bold;'><br/>HINWEIS&#58; Wenn Sie dieses Examen bestehen, erhalten Sie die folgende Zertifizierung&#58; <a href="https://docs.microsoft.com/learn/certifications/azure-developer">Microsoft Certified&#58; Azure Developer Associate</a>.</div>
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Entwickeln von Azure Infrastructure as a Service Compute-Lösungen; Entwickeln von Azure Platform as a Service Compute-Lösungen; Entwickeln für Azure Storage; Implementieren von Azure Security; Überwachung, Fehlerbehebung und Optimieren von Lösungen; Verbinden mit Azure Services und Drittanbieter-Diensten.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEHC
@@ -25,19 +28,19 @@ locales:
 - zh-cn
 - ko
 providers:
-  - providerType: pearson-vue
-    examUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-203&examname=Exam%20AZ-203:%20Developing%20Solutions%20for%20Microsoft%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-203
+- providerType: pearson-vue
+  examUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-203&examname=Exam%20AZ-203:%20Developing%20Solutions%20for%20Microsoft%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-203
 levels:
 - intermediate
 skills:
-- EINE NEUE VERSION DIESES EXAMENS, AZ -204, WURDE AM 24. FEBRUAR BEREITGESTELLT. Sie können dieses Examen ablegen, bis es am 31. Mai 2020 eingestellt wird. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, sich geändert hat.
+- EINE NEUE VERSION DIESES EXAMENS, AZ -204, WURDE AM 24. FEBRUAR BEREITGESTELLT. Sie können dieses Examen ablegen, bis es am oder um den Montag, 31. August 2020 eingestellt wird. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, sich geändert hat.
 - Entwickeln von Azure Infrastructure als Service Computing-Lösungen (10-15%)
 - Entwickeln von Azure Platform als Service Computing-Lösungen (20-25%)
 - Entwickeln für Azure-Storage (15-20%)
 - Implementieren der Azure-Sicherheit(10-15%)
 - Überwachen, Fehlerbehebung und Optimierung von Lösungen (10-15%)
 - Verbindung zu Azure- und Drittanbieter-Diensten herstellen und nutzen (20-25%)
-retirementDate: 05/31/2020
+retirementDate: 08/31/2020
 roles:
 - developer
 products:
@@ -72,7 +75,7 @@ relatedCertifications:
 - related:
     uid: none
 resources:
-- title: Lernpfad zur Zertifizierung
+- title: Lernpfad zur Zertifizirung
   description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Azure Developer Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQqM
 - title: Schulungs- und Zertifizierungsleitfaden
@@ -96,3 +99,4 @@ resources:
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
+
