--- a/learn-certs-pr/exams/az-304.yml
+++ b/learn-certs-pr/exams/az-304.yml
@@ -1,18 +1,20 @@
 ### YamlMime:Examination
-title: Microsoft Azure Architect Design (Beta)
+title: Microsoft Azure Architect Design (beta)
 metadata:
   title: 'Exam AZ-304: Microsoft Azure Architect Design (beta)'
   description: 'Exam AZ-304: Microsoft Azure Architect Design (beta)'
 uid: exam.az-304
 displayName: AZ-304
 summary: |-
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+
   Kandidaten für diese Prüfung sind Azure Solution Architects, die Interessengruppen beraten und Geschäftsanforderungen in sichere, skalierbare und zuverlässige Lösungen umsetzen.
-  
+
   Die Kandidaten sollten über fortgeschrittene Erfahrung und Kenntnisse des IT-Betriebs verfügen, einschließlich Netzwerk, Virtualisierung, Identität, Sicherheit, Geschäftskontinuität, Notfallwiederherstellung, Datenplattform, Budgetierung und Governance. Diese Position erfordert die Verwaltung der Auswirkungen von Entscheidungen in den einzelnen Bereichen auf eine Gesamtlösung.
-  
+
   Die Kandidaten müssen über Expertenkenntnisse in der Azure-Verwaltung verfügen und Erfahrung mit Azure-Entwicklungsprozessen und DevOps-Prozessen haben.
-  
-  <div style='color&#58; red; font-weight&#58; bold;'><br/>Hinweis&#58; dieses examens wird am oder um den Dienstag, 28. April 2020 verfügbar sein.</div>
+
+  <div style='font-weight&#58; bold;'><br/>Hinweis&#58; dieses examens wird am oder um den 29. Juni 2020 verfügbar sein.</div>
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Entwurfsüberwachung; Designidentität und Sicherheit; Design-Datenspeicherung; Design Business Continuity; und Infrastruktur entwerfen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4pCWz
@@ -25,7 +27,7 @@ skills:
 - Entwurfsüberwachung (10-15%)
 - Entwurf Identität und Sicherheit (25-30%)
 - Datenspeicherung verstehen (15-20%)
-- Entwicklung einer Strategie für Geschäftskontinuität (10-15%)
+- Entwicklung von Geschäftskontinuität (10-15%)
 - Infrastruktur entwerfen (25-30%)
 roles:
 - solution-architect
@@ -35,11 +37,11 @@ relatedCertifications:
 - related:
     uid: none
 resources:
-- title: Lernpfad zur Zertifizierung
+- title: Lernpfad zur Zertifizirung
   description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Azure Solutions Architect Expert.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtVsd
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
@@ -59,3 +61,4 @@ resources:
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
+
