--- a/learn-certs-pr/exams/az-500.yml
+++ b/learn-certs-pr/exams/az-500.yml
@@ -1,28 +1,33 @@
 ### YamlMime:Examination
 title: Microsoft Azure Security Technologies
 metadata:
-  title: 'Prüfung AZ-500: Microsoft Azure Security Technologies'
-  description: 'Prüfung AZ-500: Microsoft Azure Security Technologies'
+  title: 'Exam AZ-500: Microsoft Azure Security Technologies'
+  description: 'Exam AZ-500: Microsoft Azure Security Technologies'
 uid: exam.az-500
 displayName: AZ-500
-summary: >-
-  Kandidaten für diese Prüfung sind Microsoft Azure-Security-Engineers, die Sicherheitskontrollen implementieren, die Sicherheitsstandards aufrecht erhalten, Identität und Zugriff verwalten und Daten, Anwendungen und Netzwerke schützen. Kandidaten identifizieren und beheben Schwachstellen mithilfe einer Vielzahl von Sicherheitstools, implementieren Threat Protection und reagieren auf Eskalationen von Sicherheitsvorfällen. Als Microsoft Azure-Sicherheitstechniker sind die Kandidaten oft Teil eines größeren Teams, das sich der Cloud-basierten Verwaltung und Sicherheit widmet, und können auch hybride Umgebungen als Teil einer End-to-End-Infrastruktur sichern.
+summary: |-
+  <div>
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wird am 20. Mai 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.<br/><br/></div>
+  </div>
 
+  Kandidaten für diese Prüfung sind Microsoft Azure-Security-Engineers, die Sicherheitskontrollen implementieren, die Sicherheitsstandards aufrecht erhalten, Identität und Zugriff verwalten und Daten, Anwendungen und Netzwerke schützen. Kandidaten identifizieren und beheben Schwachstellen mithilfe einer Vielzahl von Sicherheitstools, implementieren Threat Protection und reagieren auf Eskalationen von Sicherheitsvorfällen. Als Microsoft Azure-Sicherheitstechniker sind die Kandidaten oft Teil eines größeren Teams, das sich der Cloud-basierten Verwaltung und Sicherheit widmet, und können auch hybride Umgebungen als Teil einer End-to-End-Infrastruktur sichern.
 
   Die Kandidaten für diese Prüfung sollten über gute Kenntnisse in Skripting und Automatisierung, ein tiefes Verständnis von Netzwerken, Virtualisierung und der Cloud N-Tier-Architektur sowie über gute Kenntnisse in Cloud-Funktionen, Microsoft Azure-Produkten und -Services sowie anderen Microsoft-Produkten und -Services verfügen.
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Identitäts- und Zugriffsmanagement, Platform-Protection implementieren, Sicherheitsmaßnahmen verwalten und Daten und Anwendungen schützen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VC70
 practiceTestUrl: https://www.mindhub.com/p/MU-AZ-500?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-500&examname=Exam%20AZ-500:%20Microsoft%20Azure%20Security%20Technologies&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-500
 locales:
 - en
 - ja
 - zh-cn
 - ko
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-500&examname=Prüfung%20AZ-500:%20Microsoft%20Azure%20Security%20Technologies&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-500
 levels:
 - intermediate
 skills:
+- Der Inhalt dieser Prüfung wird am 20. Mai 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
 - Verwalten von Identität und Zugriff (20-25%)
 - Plattform-Schutz implementieren (35-40%)
 - Verwaltung von Sicherheitsvorgängen (15-20%)
@@ -38,25 +43,36 @@ products:
 - azure-key-vault
 courses:
 - uid: course.az-500t00
+paths:
+- uid: learn.security.secure-your-cloud-apps
+- uid: learn.security.implement-resource-mgmt-security
+- uid: learn.security.implement-network-security
+- uid: learn.security.implement-host-security
+- uid: learn.security.manage-identity-and-access
+- uid: learn.security.manage-security-operations
 relatedCertifications:
 - related:
     uid: certification.azure-security-engineer
 resources:
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und ZertifizierungsleitfWerktagsaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Prüfung wiederholen
+- title: Zertifizierungsposter
+  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Unterstützung bei Zertifizierungsprüfungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Werktags (Montag-Freitag) wird Ihnenein Forenmoderator antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
   description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
+
