--- a/learn-certs-pr/exams/az-900.yml
+++ b/learn-certs-pr/exams/az-900.yml
@@ -6,8 +6,11 @@ metadata:
 uid: exam.az-900
 displayName: AZ-900
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser Prüfung wird am 28. Mai 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.</div>
-  
+  <div>
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wird am 28. Mai 2020 aktualisiert. HINWEIS&#58; Die vor dem 15. April 2020 angekündigten Aktualisierungen werden am 15. September 2020 implementiert. Die jetzt für den 28. Mai geplanten Aktualisierungen sind geringfügige Aktualisierungen im Wortlaut. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fertigkeiten herunter, um zu sehen, was sich am 28. Mai ändern wird.</div>
+  </div>
+
   Diese Prüfung richtet sich an Kandidaten, die grundlegende Kenntnisse über Cloud Services und deren Bereitstellung mit Microsoft Azure nachweisen möchten. Die Prüfung richtet sich an Kandidaten mit nicht-technischem Hintergrund, die beispielsweise mit dem Vertrieb oder der Beschaffung von Cloud-basierten Lösungen und Services zu tun haben oder sich mit Cloud-basierten Lösungen und Services beschäftigen, sowie an Kandidten mit technischem Hintergrund, die ihre grundlegenden Kenntnisse über Cloud Services überprüfen müssen. Technische IT-Erfahrung ist nicht erforderlich, jedoch sind allgemeine IT-Kenntnisse und Erfahrungen von Vorteil.
 
   Diese Prüfung kann als optionaler erster Schritt unternommen werden, um mehr über Cloud Services zu erfahren und wie diese Konzepte von Microsoft Azure veranschaulicht werden. Sie kann als Vorstufe zu Microsoft Azure oder Microsoft Cloud Services Prüfungen verwendet werden. Obwohl es ein vorteilhafter erster Schritt wäre, das Wissen auf grundlegendem Niveau zu überprüfen, ist die Teilnahme an dieser Prüfung keine Voraussetzung für die Teilnahme an anderen Zertifizierungen auf Grundlage von Azure.
@@ -16,10 +19,10 @@ iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwUY
 practiceTestUrl: https://us.mindhub.com/p/MU-AZ-900?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
 providers:
-  - providerType: pearson-vue
-    examUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-900&examname=Exam%20AZ-900:%20Microsoft%20Azure%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-900
-  - providerType: certiport
-    examUrl: http://www.certiport.com/locator
+- providerType: pearson-vue
+  examUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-900&examname=Exam%20AZ-900:%20Microsoft%20Azure%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-900
+- providerType: certiport
+  examUrl: http://www.certiport.com/locator
 locales:
 - en
 - ja
@@ -28,7 +31,7 @@ locales:
 levels:
 - beginner
 skills:
-- Der Inhalt dieser Prüfung wird am 28. Mai 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.
+- 'Der Inhalt dieser Prüfung wird am 28. Mai 2020 aktualisiert. HINWEIS: Die vor dem 15. April 2020 angekündigten Aktualisierungen werden am 15. September 2020 implementiert. Die jetzt für den 28. Mai geplanten Aktualisierungen sind geringfügige Aktualisierungen im Wortlaut. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fertigkeiten herunter, um zu sehen, was sich am 28. Mai ändern wird.'
 - Kenntnisse von Cloud Konzepten (15-20%)
 - Kenntnisse der Core Azure Services (30-35%)
 - Kenntnisse von Sicherheit, Datenschutz, Compliance und Trust (25-30%)
@@ -45,11 +48,11 @@ relatedCertifications:
 - related:
     uid: certification.azure-fundamentals
 resources:
-- title: Lernpfad zur Zertifizierung
-  description: 'Entdecken Sie die Schulungsressourcen, um von Microsoft in Azure Fundamentals.'
+- title: Lernpfad zur Zertifizirung
+  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Azure Fundamentals.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE38YZj
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
@@ -66,3 +69,4 @@ resources:
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
+
