--- a/learn-certs-pr/exams/dp-100.yml
+++ b/learn-certs-pr/exams/dp-100.yml
@@ -1,4 +1,4 @@
-﻿### YamlMime:Examination
+### YamlMime:Examination
 title: Designing and Implementing a Data Science Solution on Azure
 metadata:
   title: 'Exam DP-100: Designing and Implementing a Data Science Solution on Azure'
@@ -6,13 +6,16 @@ metadata:
 uid: exam.dp-100
 displayName: DP-100
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>Phase 1&#58; Der Inhalt dieser Prüfung wird am 22. Mai 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.<br/><br/></div>
-  
+  <div>
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wird am 22. Mai 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.<br/><br/></div>
+  </div>
+
   Azure Data Scientists wenden ihre Kenntnisse in Datenwissenschaften und maschinellem Lernen an, um Workloads für maschinelles Lernen in Azure zu implementieren und auszuführen, insbesondere mit Hilfe des Azure Machine Learning Service. Dies umfasst das Planen und Erstellen einer geeigneten Arbeitsumgebung für datenwissenschaftliche Workloads in Azure, das Ausführen von Datenexperimenten und das Trainieren von Vorhersagemodellen, das Verwalten und Optimieren von Modellen sowie das Bereitstellen von Modellen für maschinelles Lernen in der Produktion.
-subTitle: 'Dieses Examen misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Einrichten eines Azure-Arbeitsbereichs; Experimente durchführen und Modelle trainieren; Modelle optimieren und verwalten; und Modelle bereitstellen und konsumieren.'
+subTitle: 'Dieses Examen misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Einrichten eines Azure-Arbeitsbereichs; Experimente durchführen und Modelle trainieren; Modelle optimieren und verwalten; und Modelle bereitstellen und konsumieren. '
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUjA
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=DP-100&examname=Exam%20DP-100:%20Designing%20and%20Implementing%20a%20Data%20Science%20Solution%20on%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-100
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=DP-100&examname=Exam%20DP-100:%20Designing%20and%20Implementing%20a%20Data%20Science%20Solution%20on%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-100
 locales:
 - en
 - ja
@@ -21,10 +24,10 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am Freitag, 22. Mai 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.
-- Einrichten eines Azure-Arbeitsbereichs für maschinelles Lernen (30-35%) 
-- Experimente durchführen und Modelle trainieren (25-30%) 
-- Modelle optimieren und verwalten (20-25%) 
+- Der Inhalt dieser Prüfung wird am 22. Mai 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.
+- Einrichten eines Azure-Arbeitsbereichs für maschinelles Lernen (30-35%)
+- Experimente durchführen und Modelle trainieren (25-30%)
+- Modelle optimieren und verwalten (20-25%)
 - Modelle bereitstellen und verwenden (20-25%)
 roles:
 - data-scientist
@@ -60,3 +63,4 @@ resources:
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
+
