--- a/learn-certs-pr/exams/dp-201.yml
+++ b/learn-certs-pr/exams/dp-201.yml
@@ -1,4 +1,4 @@
-﻿### YamlMime:Examination
+### YamlMime:Examination
 title: Designing an Azure Data Solution
 metadata:
   title: 'Exam DP-201: Designing an Azure Data Solution'
@@ -6,19 +6,21 @@ metadata:
 uid: exam.dp-201
 displayName: DP-201
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser Prüfung wird am Donnerstag, 26. März 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.<br/><br/></div>
+  <div>
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>  
+  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am Montag, den Dienstag, 26. März 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
+  </div>
   
   Kandidaten für diese Prüfung sind Microsoft Azure-Dateningenieure, die mit Geschäftsinteressenten zusammenarbeiten, um die Datenanforderungen für die Design von Datenlösungen zu ermitteln und zu erfüllen, die Azure-Datendienste verwenden.
-  <br/>
-
+  
   Die Datentechniker von Azure sind für datenbezogene Aufgaben verantwortlich, einschließlich der Entwicklung von Azure-Datenspeicherlösungen, die relationale und nicht-relationale Datenspeicher, Batch- und Echtzeit-Datenverarbeitungslösungen sowie Datensicherheits- und Compliance-Lösungen verwenden.
-
+  
   Die Kandidaten für diese Prüfung müssen Datenlösungen entwickeln, die die folgenden Azure-Dienste verwenden&#58; Azure Cosmos DB, Azure Synapse Analytics, Azure SQL Data Warehouse, Azure Data Lake Storage, Azure Data Factory, Azure Stream Analytics, Azure Databricks und Azure Blob Storage.
 subTitle: 'Diese Prüfung misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erfüllen: Design von Azure-Datenspeicherlösungen, Design von Datenverarbeitungslösungen und Design für Datensicherheit und Konformität.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VRMb
 practiceTestUrl: https://us.mindhub.com/p/MU-DP-201?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=DP-201&examname=Exam%20DP-201:%20Designing%20an%20Azure%20Data%20Solution&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-201
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=DP-201&examname=Exam%20DP-201:%20Designing%20an%20Azure%20Data%20Solution&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-201
 locales:
 - en
 - ja
@@ -27,7 +29,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am Donnerstag, 26. März 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.
+- Der Inhalt dieser Prüfung wurde am Montag, den Dienstag, 26. März 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.
 - 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
 - Entwickeln von Azure-Datenspeicherlösungen (40-45%)
 - Design von Datenverarbeitungslösungen (25-30%)
@@ -83,3 +85,4 @@ resources:
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
+
