--- a/learn-certs-pr/exams/mb-240.yml
+++ b/learn-certs-pr/exams/mb-240.yml
@@ -1,44 +1,45 @@
 ### YamlMime:Examination
 title: Microsoft Dynamics 365 Field Service
 metadata:
-  title: 'Prüfung MB-240: Microsoft Dynamics 365 Field Service'
-  description: 'Prüfung MB-240: Microsoft Dynamics 365 Field Service'
+  title: 'Exam MB-240: Microsoft Dynamics 365 Field Service'
+  description: 'Exam MB-240: Microsoft Dynamics 365 Field Service'
 uid: exam.mb-240
 displayName: MB-240
-summary: >-
-  Kandidaten für diese Prüfung sind Microsoft Dynamics 365 Customer Engagement Funktionsberater mit Field Service Expertise. Die Kandidaten sind für die Implementierung von Lösungen verantwortlich, die Ressourcen verwalten, die den Lebenszyklus des Außendienstes abschließen.
+summary: |-
+  <div>
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wird am 19. Mai 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.<br/><br/></div>
+  </div>
 
+  Kandidaten für diese Prüfung sind Microsoft Dynamics 365 Customer Engagement Funktionsberater mit Field Service Expertise. Die Kandidaten sind für die Implementierung von Lösungen verantwortlich, die Ressourcen verwalten, die den Lebenszyklus des Außendienstes abschließen.
 
   Die Kandidaten implementieren die Außendienstprozesse, die in Zusammenarbeit mit internen und externen Teams konzipiert wurden. Diese Zusammenarbeit umfasst die Konfiguration der Standard-Administrationsbereiche der Field Service-Anwendung, die Bereitstellung der Connected Field Service (IoT)-Lösung und der mobilen Anwendung sowie die Implementierung zusätzlicher notwendiger Anpassungen. Die Kandidaten sind für die Konfiguration und den Einsatz der Außendienstanwendung in Verbindung mit der zentralen Kundendienstanwendung verantwortlich.
 
-
-  Die Kandidaten müssen über Kenntnisse in der Konfiguration und Anpassung von Komponenten der Außendienstanwendung verfügen, einschließlich der Konfiguration von Diensten, Ressourcen, Merkmalen, Vorfällen, Bestandsintegration, Servicevereinbarungen, Ressourcenplanung, Arbeitsaufträgen, Serviceaufgaben, Benutzerfunktionen im Außendienst, Außendiensteinstellungen, der Lösung Connected Field Service (IoT) und der Konfiguration der Field Service Mobile App.
+  Die Kandidaten müssen über Kenntnisse in der Konfiguration und Anpassung von Komponenten der Außendienstanwendung verfügen, einschließlich der Konfiguration von Diensten, Ressourcen, Merkmalen, Vorfällen, Bestandsintegration, Servicevereinbarungen, Ressourcenplanung, Arbeitsaufträgen, Serviceaufgaben, Benutzerrollen im Außendienst, Außendiensteinstellungen, der Lösung Connected Field Service (IoT) und der Konfiguration der Field Service Mobile App.
 subTitle: 'Diese Prüfung misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erfüllen: Konfigurieren von Außendienstanwendungen, Verwalten von Arbeitsaufträgen, Planen und Versenden von Arbeitsaufträgen, Verwalten der Mobilität im Außendienst, Verwalten von Bestand und Einkauf sowie Verwalten von Anlagen und Vereinbarungen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Vzxi
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-240&examname=Exam%20MB-240:%20Microsoft%20Dynamics%20365%20for%20Field%20Service&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-240
 locales:
 - en
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-240&examname=Prüfung%20MB-240:%20Microsoft%20Dynamics%20365%20Field%20Service&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-240
 levels:
 - intermediate
 skills:
-- Konfiguration von Außendienstanwendungen (20-25%)
+- Konfigurieren von Außendienstanwendungen (20-25%)
 - Verwaltung von Arbeitsaufträgen (15-20%)
 - Planen und Versenden von Arbeitsaufträgen (20-25%)
 - Verwaltung der Mobilität im Außendienst (10-15%)
-- Verwaltung von Lagerbestand und Einkauf (10-15%)
+- Verwaltung von Bestand und Einkauf (10-15%)
 - Verwaltung von Vermögenswerten und Vereinbarungen (10-15%)
 roles:
 - functional-consultant
-exams:
-- uid: exam.mb-200
 products:
 - dynamics
 - dynamics-field-service
+exams:
+- uid: exam.mb-200
 courses:
-- uid: course.mb-240t01
-- uid: course.mb-240t02
-- uid: course.mb-240t03
+- uid: course.mb-240t00
 paths:
 - uid: learn-bizapps.implementing-dyn365-field-service
 - uid: learn-bizapps.universal-resource-scheduling
@@ -47,23 +48,27 @@ relatedCertifications:
     uid: certification.d365-functional-consultant-field-service
 resources:
 - title: Lernpfad zur Zertifizirung
-  description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft Certified:  Dynamics 365 Field Service Functional Consultant Associate.'
+  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Dynamics 365 Field Service Functional Consultant Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35I72
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Prüfungswiederholung
+- title: Zertifizierungsposter
+  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Unterstützung bei Zertifizierungsprüfungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
   description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
+
