--- a/learn-certs-pr/exams/mb-400.yml
+++ b/learn-certs-pr/exams/mb-400.yml
@@ -1,27 +1,31 @@
 ### YamlMime:Examination
-title: Microsoft Power Apps + Dynamics 365 Developer (beta)
+title: 'Microsoft Power Apps + Dynamics 365 Developer'
 metadata:
-  title: 'Prüfung MB-400: Microsoft Power Apps + Dynamics 365 Developer (beta)'
-  description: 'Prüfung MB-400: Microsoft Power Apps + Dynamics 365 Developer (beta)'
+  title: 'Exam MB-400: Microsoft Power Apps + Dynamics 365 Developer'
+  description: 'Exam MB-400: Microsoft Power Apps + Dynamics 365 Developer'
 uid: exam.mb-400
 displayName: MB-400
-summary: >-
-  Kandidaten für diese Prüfung sind Entwickler, die mit Microsoft Power Apps modellbasierten Anwendungen in Dynamics 365 arbeiten, um Dynamics 365-Implementierungen zu entwerfen, zu entwickeln, zu sichern und zu erweitern. Die Kandidaten implementieren die Komponenten einer Lösung, zu denen Anwendungserweiterungen, individuelle Benutzererlebnisse, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und benutzerdefinierte Visualisierungen gehören.
+summary: |-
+  <div>
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wird am 22. Mai 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.<br/><br/></div>
+  </div>
 
+  Kandidaten für diese Prüfung sind Entwickler, die mit Microsoft Power Apps modellbasierten Anwendungen in Dynamics 365 arbeiten, um Dynamics 365-Implementierungen zu entwerfen, zu entwickeln, zu sichern und zu erweitern. Die Kandidaten implementieren die Komponenten einer Lösung, zu denen Anwendungserweiterungen, individuelle Benutzererlebnisse, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und benutzerdefinierte Visualisierungen gehören.
 
   Die Kandidaten müssen über fundierte Kenntnisse in Power Apps modellbasierten Anwendungen in Dynamics 365 verfügen, einschließlich genauer Kenntnisse der Anpassung, Konfiguration, Integration und Erweiterbarkeit sowie der Grenzen und Einschränkungen. Die Kandidaten sollen über ein grundlegendes Verständnis der DevOps-Methoden für Power Apps modellbasierte Anwendungen in Dynamics 365 verfügen. Die Kandidaten müssen Daten bereitstellen, speichern und dokumentieren.
 
-
-  Die Kandidaten sollten über Entwicklungserfahrung verfügen, die JavaScript, TypeScript, C#, HTML, .NET, Microsoft Azure, Office 365, RESTful Web Services, ASP.NET und PowerBI umfasst.
+  Die Kandidaten sollten über Entwicklungserfahrung verfügen, die JavaScript, TypeScript, C#, HTML, .NET, Microsoft Azure, Office 365, RESTful Web Services, ASP.NET und Power BI umfasst.
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Erstellen eines technischen Designs, Konfigurieren eines Common Data Service (CDS), Erstellen und Konfigurieren von Power Apps, Konfigurieren der Geschäftsprozessautomatisierung, Erweitern der Benutzererfahrung, Erweitern der Plattform und Entwickeln von Integrationen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE42uM0
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-400&examname=Exam%20MB-400:%20Microsoft%20Power%20Apps%20+%20Dynamics%20365%20Developer&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-400
 locales:
 - en
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-400&examname=Prüfung%20MB-400:%20Microsoft%20Power%20Apps%20+%20Dynamics%20365%20Developer&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-400
 levels:
 - intermediate
 skills:
+- Der Inhalt dieser Prüfung wird am 22. Mai 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.
 - Erstellen eines technischen Designs (10-15%)
 - Konfigurieren des Common Data Service (CDS) (15-20%)
 - Erstellen und Konfigurieren von Power Apps (10-15%)
@@ -31,11 +35,11 @@ skills:
 - Integrationen entwickeln (10-15%)
 roles:
 - developer
-exams:
-- uid: exam.mb-200
 products:
 - dynamics
 - dynamics-customer-engagement
+exams:
+- uid: exam.mb-200
 courses:
 - uid: course.mb-400t00
 paths:
@@ -47,21 +51,28 @@ relatedCertifications:
 - related:
     uid: certification.power-apps-and-d365-developer-associate
 resources:
+- title: Lernpfad zur Zertifizirung
+  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Power Apps + Dynamics 365 Developer Associate.'
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4o4j6
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Prüfungswiederholung
+- title: Zertifizierungsposter
+  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Unterstützung bei Zertifizierungsprüfungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
   description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
+
