--- a/learn-certs-pr/exams/mb-700.yml
+++ b/learn-certs-pr/exams/mb-700.yml
@@ -6,13 +6,15 @@ metadata:
 uid: exam.mb-700
 displayName: MB-700
 summary: |-
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+
   Solution Architects (Lösungsarchitekten) für Finance and Operations Apps in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die sich mit den Unternehmen und den Mitgliedern des Implementierungsteams beraten, um für die Anforderungen des Unternehmens klar definierte, kostengünstige Lösungen zu entwickeln.
 
   Der Solution Architect (Lösungsarchitekt) ist für die Integrität und erfolgreiche Umsetzung des gesamten Lösungsdesigns verantwortlich. Er bietet eine kritische Begleitung während der Pre-Sales-Phase und des Designs, er berät während des restlichen Projektlebenszyklus und löst Probleme, die während der Implementierung auftreten.
 
-  Der Solution Architect (Lösungsarchitekt) muss über breites Wissen und Erfahrung verfügen, das die Geschäftsanforderungen und Produktfunktionen abdeckt. Der Solution Architect (Lösungsarchitekt) muss über breites funktionales und technisches Fachwissen als Entwickler oder Fachberater in einer der folgenden Funktionen verfügen: Finanzen, Fertigung oder Lieferkettenmanagement. Darüber hinaus verfügen Lösungsarchitekten über umfangreiche Fachkenntnisse in einer oder mehreren Kundenbranchen.
-  
-  <div style='color&#58; red;'><br/>Beta-Prüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. Um mehr zu erfahren <a href="/learn/certifications/certification-exams#participating-in-beta-exams">about the value and importance of beta exams</a>.</div>
+  Der Solution Architect (Lösungsarchitekt) muss über breites Wissen und Erfahrung verfügen, das die Geschäftsanforderungen und Produktfunktionen abdeckt. Der Solution Architect (Lösungsarchitekt) muss über breites funktionales und technisches Fachwissen als Entwickler oder Fachberater in einer der folgenden Funktionen verfügen&#58; Finanzen, Fertigung oder Lieferkettenmanagement. Darüber hinaus verfügen Lösungsarchitekten über umfangreiche Fachkenntnisse in einer oder mehreren Kundenbranchen.
+
+  <div style='font-weight&#58; bold;'><br/>Beta-Prüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. Um mehr zu erfahren <a href="/learn/certifications/certification-exams#participating-in-beta-exams">about the value and importance of beta exams</a>.</div>
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Identifizieren von Lösungsanforderungen, Entwerfen von Lösungskomponenten und Definieren von Lösungstest- und Managementstrategien.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43Vdh
@@ -29,6 +31,8 @@ roles:
 - solution-architect
 products:
 - dynamics
+courses:
+- uid: course.mb-700t00
 paths:
 - uid: learn-dynamics.become-solution-architect
 relatedCertifications:
@@ -36,7 +40,7 @@ relatedCertifications:
     uid: certification.d365-finance-and-operations-apps-solution-architect-expert
 resources:
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
@@ -56,3 +60,4 @@ resources:
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
+
