--- a/learn-certs-pr/exams/ms-700.yml
+++ b/learn-certs-pr/exams/ms-700.yml
@@ -1,37 +1,41 @@
 ### YamlMime:Examination
-title: Managing Microsoft Teams
+title: 'Managing Microsoft Teams'
 metadata:
-  title: 'Prüfung MS-700: Managing Microsoft Teams'
-  description: 'Prüfung MS-700: Managing Microsoft Teams'
+  title: 'Exam MS-700: Managing Microsoft Teams'
+  description: 'Exam MS-700: Managing Microsoft Teams'
 uid: exam.ms-700
 displayName: MS-700
-summary: >-
-  Kandidaten für diese Prüfung sind Microsoft Teams Administratoren in Unternehmen. Der Microsoft Teams Administrator konfiguriert, implementiert und verwaltet Office 365-Workloads für Microsoft Teams, die sich auf eine effiziente und effektive Zusammenarbeit und Kommunikation in einer Unternehmensumgebung konzentrieren.
+summary: |-
+  <div><div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wird am 28. Mai 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.<br/><br/></div>
+  </div>
 
+  Kandidaten für diese Prüfung sind Microsoft Teams Administratoren in Unternehmen. Der Microsoft Teams Administrator konfiguriert, implementiert und verwaltet Office 365-Workloads für Microsoft Teams, die sich auf eine effiziente und effektive Zusammenarbeit und Kommunikation in einer Unternehmensumgebung konzentrieren.
 
   Der Team administrator muss in der Lage sein, Team, Chats, Apps, Kanäle, Meetings, Audiokonferenzen, Live-Events und Anrufe zu planen, bereitzustellen und zu verwalten. Der Teamadministrator ist auch für das Upgrade von Skype für Unternehmen auf Teams verantwortlich.
 
-
   Der Teams-Administrator arbeitet mit Telefonie-Technikern zusammen, um erweiterte Sprachfunktionen in Microsoft Teams zu integrieren. Diese Funktion ist nicht verantwortlich für die Konfiguration des direkten Routings, der Konfiguration des Call Routing oder der Integration der Telefonie. Der Teamadministrator kann mit anderen Workload-Administratorfunktionen arbeiten, einschließlich Sicherheit und Compliance, Messaging, Netzwerk, Identität und Geräte.
-
 
   Die Kandidaten für diese Prüfung sollten über gute Kenntnisse in der Verwaltung der Teameinstellungen mit PowerShell verfügen. Der Teamadministrator verfügt über ein grundlegendes Verständnis für Integrationspunkte mit Anwendungen und Diensten, einschließlich, aber nicht beschränkt auf SharePoint, OneDrive for Business, Exchange, Azure AD und Office 365 Groups. Der Teamadministrator ist mit der Integration externer Anwendungen und Dienste vertraut.
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Planen und Konfigurieren einer Microsoft-Team-Umgebung, Verwalten von Chat, Anrufen und Meetings sowie Verwalten von Teams und App-Richtlinien.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43VcF
+practiceTestUrl: https://www.mindhub.com/p/MU-MS-700?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MS-700&examname=Exam%20MS-700:%20Managing%20Microsoft%20Teams&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-700
 locales:
 - en
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MS-700&examname=Prüfung%20MS-700:%20Managing%20Microsoft%20Teams&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-700
 levels:
 - intermediate
 skills:
-- Planen und Konfigurieren einer Microsoft-Teamumgebung (45 -50%)
-- Verwalten von Chats, Anrufen und Meetings (30 -35%)
-- Verwalten von Team- und App-Richtlinien (20 -25%)
+- Der Inhalt dieser Prüfung wird am 28. Mai 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
+- Planen und Konfigurieren einer Microsoft-Teamumgebung (45-50%)
+- Verwalten von Chats, Anrufen und Meetings (30-35%)
+- Verwalten von Team- und App-Richtlinien (20-25%)
 roles:
 - administrator
 products:
 - m365
+- office-teams
 courses:
 - uid: course.ms-700t00
 paths:
@@ -45,20 +49,24 @@ resources:
   description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Teams Administrator Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE45gtR
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Prüfungswiederholung
+- title: Zertifizierungsposter
+  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Unterstützung bei Zertifizierungsprüfungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
   description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
+
