--- a/learn-certs-pr/exams/ms-900.yml
+++ b/learn-certs-pr/exams/ms-900.yml
@@ -1,13 +1,17 @@
 ### YamlMime:Examination
 title: Microsoft 365 Fundamentals
 metadata:
-  title: 'Prüfung MS-900: Microsoft 365 Fundamentals'
-  description: 'Prüfung MS-900: Microsoft 365 Fundamentals'
+  title: 'Exam MS-900: Microsoft 365 Fundamentals'
+  description: 'Exam MS-900: Microsoft 365 Fundamentals'
 uid: exam.ms-900
 displayName: MS-900
-summary: >-
-  Diese Prüfung ist für Kandidaten, die Ihre grundlegenden Kenntnisse zu Überlegungen und Vorteilen von der Einbindung von Cloud -Diensten im allgemeinen und des Software as a Service (SaaS) Cloud-Modells nachweisen möchten. Die Prüfung umfasst auch Kenntnisse über die verfügbaren Optionen und Vorteile einer Implementierung von Microsoft 365 Cloud- Service-Angeboten.
+summary: |-
+  <div>
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am 14. April 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
+  </div>
 
+  Diese Prüfung ist für Kandidaten, die Ihre grundlegenden Kenntnisse zu Überlegungen und Vorteilen von der Einbindung von Cloud Diensten im allgemeinen und des Software as a Service (SaaS) Modells unter Beweis stellen möchten. Die Prüfung umfasst auch Kenntnisse über die verfügbaren Optionen und Vorteile einer Implementierung von Microsoft 365 Cloud- Service-Angeboten.
 
   Die Prüfung kann ergänzend vor Prüfungen zu Cloud Computing und Technologie wie Office 365, Microsoft Intune, Azure Information Protection (AIP) und Windows 10 genommen werden.
 subTitle: Stellen Sie unter Beweis, dass Sie Cloud-Konzepte, Microsoft 365-Dienste und -Konzepte, Sicherheit, Compliance, Datenschutz und Vertrauen in Microsoft 365 sowie Microsoft 365 Preise und Support verstehen.
@@ -18,17 +22,18 @@ locales:
 - en
 - ja
 providers:
-  - providerType: pearson-vue
-    examUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MS-900&examname=Prüfung%20MS-900:%20Microsoft%20365%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fen-us%2Flearn%2Fcertifications%2Fexams%2Fms-900
-  - providerType: certiport
-    examUrl: https://www.certiport.com/locator
+- providerType: pearson-vue
+  examUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MS-900&examname=Exam%20MS-900:%20Microsoft%20365%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-900
+- providerType: certiport
+  examUrl: http://www.certiport.com/locator
 levels:
 - beginner
 skills:
-- Kenntnisse von Cloud Konzepten (15-20%)
-- Verstehen der wichtigsten Microsoft 365 Services und Konzepte (30-35%)
-- Sicherheit, Konformität, Datenschutz und Vertrauenswürdigkeit unter Microsoft 365 verstehen (25-30%)
-- Verstehen von Microsoft 365 Preisgestaltung und Support (25-30%)
+- Der Inhalt dieser Prüfung wurde am 14. April 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Cloud-Konzepte beschreiben (15-20%)
+- Beschreiben der wichtigsten Microsoft 365-Dienste und -Konzepte (30-35%)
+- Beschreiben der Sicherheits-, Compliance-, Datenschutz- und Vertrauensoptionen in Microsoft 365 (25-30%)
+- Beschreiben der Preis- und Supportoptionen für Microsoft 365 (25-30%)
 roles:
 - administrator
 products:
@@ -44,20 +49,24 @@ relatedCertifications:
     uid: certification.microsoft-365-fundamentals
 resources:
 - title: Lernpfad zur Zertifizirung
-  description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft Certified: Fundamentals zu werden.'
+  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Fundamentals.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35svT
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
+- title: Zertifizierungsposter
+  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
 - title: Unterstützung bei Zertifizierungsprüfungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
   description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
+
