--- a/learn-certs-pr/exams/pl-900.yml
+++ b/learn-certs-pr/exams/pl-900.yml
@@ -1,4 +1,4 @@
-﻿### YamlMime:Examination
+### YamlMime:Examination
 title: 'Microsoft Power Platform Fundamentals'
 metadata:
   title: 'Exam PL-900: Microsoft Power Platform Fundamentals'
@@ -6,22 +6,28 @@ metadata:
 uid: exam.pl-900
 displayName: PL-900
 summary: |-
+  <div><div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wird am 1. Mai 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.<br/><br/></div>
+  </div>
+
   Kandidaten für diese Prüfung sind Anwender, die eine Produktivitätssteigerung durch Automatisierung von Geschäftsprozessen, durch Datenanalyse zum Erlangen geschäftlicher Erkenntnisse und durch effektiveres Handeln durch Erstellen einfacher App-Funktionen anstreben.
-  
+
   Diese Prüfung umfasst die folgende&#58; Beschreiben Sie die Power-Platform-Komponenten&#58; Power Apps, Power BI, Microsoft Flow, Common Data Service (CDS), Konnektoren und AI Builder. Beschreiben Sie cloudübergreifende Szenarien, die über Microsoft 365, Dynamics 365, Microsoft Azure und Drittanbieterdienste repräsentiert werden. Identifizieren Sie die Vorteile und Fähigkeiten von Power Platform. Identifizieren Sie die grundlegende Funktionalität und den Geschäftswert der Power-Platform-Komponenten. Implementieren Sie einfache Lösungen mit Microsoft Flow, Power BI und AI Builder und erstellen Sie eine Basis-App in einer No-Code Umgebung.
 subTitle: Diese Prüfung misst Ihre Fähigkeit, den Geschäftswert und die Kernkomponenten von Power Platform zu verstehen und einzuschätzen und Ihre Fähigkeit, den Geschäftswert von Power BI und Microsoft Flow zu demonstrieren.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43Nnn
+practiceTestUrl: https://www.mindhub.com/p/MU-PL-900?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
 locales:
 - en
 providers:
-  - providerType: pearson-vue
-    examUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=PL-900&examname=Exam%20PL-900:%20Microsoft%20Power%20Platform%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-900
-  - providerType: certiport
-    examUrl: http://www.certiport.com/locator
+- providerType: pearson-vue
+  examUrl: 'https://examregistration.microsoft.com/?locale=de-de&examcode=PL-900&examname=Exam%20PL-900:%20Microsoft%20Power%20Platform%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-900'
+- providerType: certiport
+  examUrl: http://www.certiport.com/locator
 levels:
 - beginner
 skills:
+- Der Inhalt dieser Prüfung wird am 1. Mai 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.
 - Den Geschäftswert der Power Platform verstehen (20-25%)
 - Die Kernkomponenten der Power Platform verstehen (20-25%)
 - Den Geschäftswert von Power BI veranschaulichen (15-20%)
@@ -39,7 +45,7 @@ relatedCertifications:
 - related:
     uid: certification.power-platform-fundamentals
 resources:
-- title: Lernpfad zur Zertifizierung
+- title: Lernpfad zur Zertifizirung
   description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Power Platform Fundamentals.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4oeDu
 - title: Schulungs- und Zertifizierungsleitfaden
@@ -63,3 +69,4 @@ resources:
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
+
