--- a/learn-certs-pr/m365-developer-associate.yml
+++ b/learn-certs-pr/m365-developer-associate.yml
@@ -2,18 +2,20 @@
 title: 'Microsoft 365 Certified: Developer Associate'
 metadata:
   title: 'Microsoft 365 Certified: Developer Associate'
-  description: Microsoft 365 Developer Associate entwerfen, erstellen, testen und warten Anwendungen und Lösungen, die für die Produktivitäts- und Kollaborationsanforderungen von Unternehmen optimiert sind, die die Microsoft 365-Plattform nutzen.
+  description: Microsoft 365 Developer entwerfen, erstellen, testen und warten Anwendungen und Lösungen, die für die Produktivitäts- und Kollaborationsanforderungen von Unternehmen optimiert sind, die die Microsoft 365-Plattform nutzen.
 uid: certification.m365-developer-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: >-
-  Microsoft 365 Developer Associate entwerfen, erstellen, testen und warten Anwendungen und Lösungen, die für die Produktivitäts- und Kollaborationsanforderungen von Unternehmen optimiert sind, die die Microsoft 365-Plattform nutzen.
+summary: |-
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
 
+  Microsoft 365 Developer entwerfen, erstellen, testen und warten Anwendungen und Lösungen, die für die Produktivitäts- und Kollaborationsanforderungen von Unternehmen optimiert sind, die die Microsoft 365-Plattform nutzen.
 
-  Microsoft 365 Entwickler beherrschen Microsoft Identity und Microsoft Graph. Sie verfügen über allgemeine Kenntnisse über UI-Elemente (Adaptive Cards und UI Fabric), Integrationspunkte (einschließlich Microsoft Teams, Office Add-Ins, SharePoint Framework, Actionable Messages) und die Festlegung von Workload-Plattform-Zielen.
-subTitle: Microsoft 365 Developer Associate entwerfen, erstellen, testen und warten Anwendungen und Lösungen, die für die Produktivitäts- und Kollaborationsanforderungen von Unternehmen optimiert sind, die die Microsoft 365-Plattform nutzen.
+  Microsoft 365 Developer beherrschen Microsoft Identity und Microsoft Graph. Sie verfügen über allgemeine Kenntnisse über UI-Elemente (Adaptive Cards und UI Fabric), Integrationspunkte (einschließlich Microsoft Teams, Office Add-Ins, SharePoint Framework, Actionable Messages) und die Festlegung von Workload-Plattform-Zielen.
+subTitle: Microsoft 365 Developer entwerfen, erstellen, testen und warten Anwendungen und Lösungen, die für die Produktivitäts- und Kollaborationsanforderungen von Unternehmen optimiert sind, die die Microsoft 365-Plattform nutzen.
 levels:
 - intermediate
 skills:
+- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
 - Microsoft Identity einrichten
 - Apps mit Microsoft Graph erstellen
 - SharePoint erweitern und anpassen
@@ -35,20 +37,21 @@ exams:
 - uid: exam.ms-600
 resources:
 - title: Lernpfad zur Zertifizirung
-  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft 365 Certified: Developer Associate.'
+  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Developer Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4561r
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Prüfungswiederholung
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: deals.md
 - title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
+
