--- a/learn-certs-pr/mcse-productivity-certification.yml
+++ b/learn-certs-pr/mcse-productivity-certification.yml
@@ -6,11 +6,14 @@ metadata:
 uid: certification.mcse-productivity-certification
 iconUrl: /media/learn/certification/badges/mcse-badge.svg
 summary: |-
-  <div style='color&#58; red;'>Dieses Examen wird am 30. Juni 2020 eingestellt. Eine Ersatzprüfung kann verfügbar sein. Um mehr zu erfahren, besuchen Sie unseren Blog: <a href="https://www.microsoft.com/en-us/learning/community.aspx">https://www.microsoft.com/en-us/learning/community.aspx</a> und überprüfen Sie unsere Prüfungsabgaben. Hinweis: Prüfungen werden um 23:59 Uhr Central Standard Time eingestellt<br/><br/></div>
-  
-  Diese Zertifizierung bestätigt, dass Sie die erforderlichen Kompetenzen haben, um Ihr Unternehmen in die Cloud zu bringen, die Produktivität und Flexibilität der Benutzer zu steigern, den Datenverlust zu reduzieren und die Datensicherheit für Ihre Organisation zu verbessern. Diese Zertifizierung kann verwendet werden, um eine der Voraussetzungen zu erfüllen, um ein [Microsoft 365 Certified&#58; Enterprise Administrator Expert](https://www.microsoft.com/learning/m365-enterprise-administrator.aspx) zu werden.
-  
-  Um ein MCSE Productivity Solutions Expert zu werden, bestehen die folgenden Anforderungen:
+  <div>
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div><strong>Diese Zertifizierung endet am Sonntag, 31. Januar 2021. Nach diesem Datum können Sie diese Zertifizierung nicht mehr erhalten. Alle Zertifizierungen, die Sie vor deren Ablaufen erhalten haben, werden weiterhin auf Ihrem Transkript im <a href='https://www.microsoft.com/learning/dashboard.aspx'>Zertifizierungs-Dashboard</a> angezeigt. Sie können auch <a href='/learn/certifications/retired-certifications'>alle abgelaufenen Zertifizierungen durchsuchen</a>.</strong><br/><br/></div>
+  </div>
+
+  Diese Zertifizierung bestätigt, dass Sie die erforderlichen Kompetenzen haben, um Ihr Unternehmen in die Cloud zu bringen, die Produktivität und Flexibilität der Benutzer zu steigern, den Datenverlust zu reduzieren und die Datensicherheit für Ihre Organisation zu verbessern. Diese Zertifizierung kann verwendet werden, um eine der Voraussetzungen zu erfüllen, um ein [Microsoft 365 Certified Enterprise Administrator Expert](https://www.microsoft.com/learning/m365-enterprise-administrator.aspx) zu werden.
+
+  Um ein MCSE Productivity Solutions Expert zu werden, bestehen die folgenden Anforderungen&#58;
   - Erhalten Sie eine Voraussetzung für die Zertifizierung
     - Voraussetzungsoption 1&#58; [MCSA Windows Server 2012](https://www.microsoft.com/learning/mcsa-windows-server-certification.aspx)
     - Voraussetzungsoption 2&#58; [MCSA Windows Server 2016](https://www.microsoft.com/learning/mcsa-windows-server-2016-certification.aspx)
@@ -19,7 +22,7 @@ summary: |-
     - [70-334&#58; Core Solutions of Microsoft Skype for Business](/learn/certifications/exams/70-334)
     - [70-339&#58; Managing Microsoft SharePoint Server 2016](/learn/certifications/exams/70-339)
     - [70-345&#58; Designing and Deploying Microsoft Exchange Server 2016](/learn/certifications/exams/70-345)
-subTitle: 'Diese Zertifizierung bestätigt, dass Sie die erforderlichen Kompetenzen haben, um Ihr Unternehmen in die Cloud zu bringen, die Produktivität und Flexibilität der Benutzer zu steigern, den Datenverlust zu reduzieren und die Datensicherheit für Ihre Organisation zu verbessern. Diese Zertifizierung kann verwendet werden, um eine der Voraussetzungen zu erfüllen, um Microsoft 365 Certified: Enterprise Administrator Expert zu werden.'
+subTitle: Diese Zertifizierung bestätigt, dass Sie die erforderlichen Kompetenzen haben, um Ihr Unternehmen in die Cloud zu bringen, die Produktivität und Flexibilität der Benutzer zu steigern, den Datenverlust zu reduzieren und die Datensicherheit für Ihre Organisation zu verbessern. Diese Zertifizierung kann verwendet werden, um eine der Voraussetzungen zu erfüllen, um Microsoft 365 Certified Enterprise Administrator Expert zu werden.
 levels:
 - advanced
 skills:
@@ -42,7 +45,7 @@ exams:
 - uid: exam.70-333
 resources:
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
@@ -56,3 +59,4 @@ resources:
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
+
