--- a/learn-certs-pr/power-apps-and-d365-developer-associate.yml
+++ b/learn-certs-pr/power-apps-and-d365-developer-associate.yml
@@ -2,24 +2,27 @@
 title: 'Microsoft Certified: Power Apps + Dynamics 365 Developer Associate'
 metadata:
   title: 'Microsoft Certified: Power Apps + Dynamics 365 Developer Associate'
-  description: Entwickler, die mit Microsoft Power Apps und Dynamics 365 arbeiten, sind für Design, Entwicklung, Sicherung und Erweiterung von  Dynamics 365-Implementierungen verantwortlich. Kandidaten implementieren Komponenten der Lösung, die Anwendungserweiterungen, benutzerdefinierte Benutzererfahrungen, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und kundenspezifische Visualisierungen umfassen.
+  description: Developers (Entwickler), die mit Microsoft Power Apps und Dynamics 365 arbeiten, sind für Design, Entwicklung, Sicherung und Erweiterung von  Dynamics 365-Implementierungen verantwortlich. Kandidaten implementieren Komponenten der Lösung, die Anwendungserweiterungen, benutzerdefinierte Benutzererfahrungen, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und kundenspezifische Visualisierungen umfassen.
 uid: certification.power-apps-and-d365-developer-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: Entwickler, die mit Microsoft Power Apps und Dynamics 365 arbeiten, sind für Design, Entwicklung, Sicherung und Erweiterung von  Dynamics 365-Implementierungen verantwortlich. Kandidaten implementieren Komponenten der Lösung, die Anwendungserweiterungen, benutzerdefinierte Benutzererfahrungen, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und kundenspezifische Visualisierungen umfassen.
-subTitle: Entwickler, die mit Microsoft Power Apps und Dynamics 365 arbeiten, sind für Design, Entwicklung, Sicherung und Erweiterung von  Dynamics 365-Implementierungen verantwortlich.
+summary: |-
+  <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+
+  Developers (Entwickler), die mit Microsoft Power Apps und Dynamics 365 arbeiten, sind für Design, Entwicklung, Sicherung und Erweiterung von  Dynamics 365-Implementierungen verantwortlich. Kandidaten implementieren Komponenten der Lösung, die Anwendungserweiterungen, benutzerdefinierte Benutzererfahrungen, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und kundenspezifische Visualisierungen umfassen.
+subTitle: Developers (Entwickler), die mit Microsoft Power Apps und Dynamics 365 arbeiten, sind für Design, Entwicklung, Sicherung und Erweiterung von  Dynamics 365-Implementierungen verantwortlich.
 levels:
 - intermediate
 skills:
 - Erkennen von Anforderungen, Analyse und Planung
 - Erstellen und Verwalten des Benutzererlebnisdesigns
-- Verwalten von Entitäten  und Daten
+- Verwalten von Entitäten und Daten
 - Sicherheit implementieren
 - Integration implementieren
-- Implementieren und testen der Lösung
+- Durchführung von Lösungsimplementierungen und Tests
 - Erstellen eines technischen Designs
-- Konfigurieren des Common Data Service  (CDS)
+- Konfigurieren des Common Data Service (CDS)
 - Erstellen und Konfigurieren von Power Apps
-- Konfigurieren  der Automatisierung von Geschäftsprozessen
+- Konfigurieren der Automatisierung von Geschäftsprozessen
 - Verbessern des Benutzererlebnisses
 - Erweitern der Plattform
 - Integrationen entwickeln
@@ -52,18 +55,22 @@ exams:
 - uid: exam.mb-200
 - uid: exam.mb-400
 resources:
+- title: Lernpfad zur Zertifizirung
+  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Power Apps + Dynamics 365 Developer Associate.'
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4o4j6
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Prüfungswiederholung
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: deals.md
 - title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
+
