--- a/learn-certs-pr/power-apps-and-d365-solution-architect-expert.yml
+++ b/learn-certs-pr/power-apps-and-d365-solution-architect-expert.yml
@@ -2,14 +2,15 @@
 title: 'Microsoft Certified: Power Apps + Dynamics 365 Solution Architect Expert'
 metadata:
   title: 'Microsoft Certified: Power Apps + Dynamics 365 Solution Architect Expert'
-  description: Solution Architects für Microsoft Power Apps modellbasierte Apps in Dynamics 365 implementieren Lösungen, die sich mit umfassenden unternehmerischen und technischen Anforderungen von Organisationen befassen.
+  description: Solution Architects (Lösungsarchitekt) für Microsoft Power Apps modellbasierte Apps in Dynamics 365 implementieren Lösungen, die sich mit umfassenden unternehmerischen und technischen Anforderungen von Organisationen befassen.
 uid: certification.power-apps-and-d365-solution-architect-expert
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
-summary: "Solution Architects für Microsoft Power Apps modellbasierte Apps in Dynamics 365 implementieren Lösungen, die sich mit umfassenden unternehmerischen und technischen Anforderungen von Organisationen befassen.  \n\n<div style=\"color:red\"><br/><strong>NOTE&#58; This certification will not be available until January 27, 2020</strong></div>"
-subTitle: Solution Architects für Microsoft Power Apps modellbasierte Apps in Dynamics 365 implementieren Lösungen, die sich mit umfassenden unternehmerischen und technischen Anforderungen von Organisationen befassen.
+summary: "<div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>\r\n\r\nSolution Architects (Lösungsarchitekt) für Microsoft Power Apps modellbasierte Apps in Dynamics 365 implementieren Lösungen, die sich mit umfassenden unternehmerischen und technischen Anforderungen von Organisationen befassen.  "
+subTitle: Solution Architects (Lösungsarchitekt) für Microsoft Power Apps modellbasierte Apps in Dynamics 365 implementieren Lösungen, die sich mit umfassenden unternehmerischen und technischen Anforderungen von Organisationen befassen.
 levels:
 - advanced
 skills:
+- 'HINWEIS: Die Aufzählungszeichen, die unter den im folgenden Dokument gemessenen Fähigkeiten angezeigt werden, sollen veranschaulichen, wie wir diese Fähigkeiten bewerten. Diese Liste ist nicht endgültig oder vollständig.'
 - Analysieren der Anforderungen und Planen einer Lösung
 - Eine Lösung entwickeln
 - Die Lösung umsetzen
@@ -19,6 +20,13 @@ type: role-based
 products:
 - dynamics
 - power-apps
+courses:
+- uid: course.mb-600t00
+paths:
+- uid: learn-dynamics.become-solution-architect
+pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE440p0
+exams:
+- uid: exam.mb-600
 prerequisites:
 - uid: certification.power-apps-and-d365-developer-associate
   isOptional: false
@@ -30,22 +38,23 @@ prerequisites:
   isOptional: false
 - uid: certification.d365-functional-consultant-field-service
   isOptional: false
-pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE440p0
-exams:
-- uid: exam.mb-600
 resources:
+- title: Lernpfad zur Zertifizirung
+  description: 'Lernen Sie die Schulungsressourcen kennen, mit deren Hilfe Sie ein Microsoft Certified: Power Apps + Dynamics 365 Solution Architect Expert.'
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tKUY
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Prüfungswiederholung
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: deals.md
 - title: Unterstützung von Zertifizierungen
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
+
